--- a/책/cleancode/[1-2]깨끗한코드,의미있는이름.md
+++ b/책/cleancode/[1-2]깨끗한코드,의미있는이름.md
@@ -1,12 +1,69 @@
-# 정리 
-- [시작](시작)
+## 1. 깨끗한 코드란?
 
-##시작
+### 주의깊게 코드를 작성한 코드
 
-- 소프트웨어 활동의 80%이상은 유지보수이다. 읽기 좋은 코드는 돌아가는 코드만큼이나 중요하다.
-- 나쁜코드는 생산성과 직결되는 개발속도를 크게 떨어뜨린다. 그리고 사이드 이펙트는 그만큼 증가하며 생산성은 0에 수렴하게끔 떨어진다.
+- 우아하고 효율적인 코드. 즉 보기 좋은 코드
+- 예외처리와 메모리 누수, 일관성 없는 컨벤션을 지양하는 세세하고 꼼꼼하고 코드
+- 깨끗한 코드는 부수적인 작업이 없는 **한가지 일**에 집중한 코드이다.
+- 가독성이 좋아서 고치기 쉬운 코드
 
-## 깨끗한 코드란?
+
+### 보이스카우트 규칙
+
+> 캠프장에 처음 왔을 때보다 더 깨끗하게 해놓고 떠나라!
+
+- 코드를 작성하고 떠날 때도 한 번 더 체크하고 정리해서 시간이 지날수록 좋은 코드로 만들면 어떨까?
+
+## 2. 의미 있는 이름
+
+> 네이밍에 의도를 분명히 밝혀라
+
+- 아래 변수명을 통해 내용을 파악하려고 할 때, time의 주석이 없다면 의도를 알아차릴 수 없다.
+
+```java
+ int time; // 1) 경과 시간
+
+ int elapsedTimeInDays;
+```
+
+> 그릇된 정보를 피하라
+
+- 혼동 될 수 있는 단어에 대해 구체화
+
+> 의미있게 구분하라
+
+- 불용어는 피하자(아무런 정보를 제공할 수 없는 단어)
+- Product ,ProductInfo, ProductData 클래스가 존재한다고 가정할 때 Info와 Data로 어떤 정보를 얻을 수 있을까?
+- 위 상황에서 Info와 Data는 개념을 구분하지 않은 불용어다.
+
+> 검색하기 쉬운 이름을 사용하라.
+
+- 숫자 7대신 STUDENT_COUNT를 사용하면 검색할 때 더 쉽겠다.
+
+### 인터페이스 클래스와 구현 클래스
+
+- 마이크로소프트 C# 네이밍 컨벤션 등 기타 언어들에서 종종 인터페이스 앞의 I 접두어를 권장하고 사용하도록 지시하는 경우를 찾을 수 있다.
+
+- 하지만 책의 저자 혹은 대부분 자바 네이밍 규칙에서는 인터페이스 이름은 I 등 접두어를 붙이지 말도록 권장한다.
+
+- 구현클래스와 인터페이스를 구분하고 싶다면, 인터페이스 대신 구현클래스를 통해 구분하자!(ShapeImpl)
+
+### 클래스 이름과 메소드 이름
+
+- 클래스 이름과 객체 이름은 명사나 명사구가 좋다.
+    + Manager,Processor,Data,Info 는 피하고 Customer, WikiPage 등이 좋은 예
+
+- 메소드 이름은 동사나 동사구가 적합
+    + postPage, deletePage, save 는 좋은 예
+
+- 한 개념에 한 단어를 사용하자.
+    + Controller, Manager, Driver를 섞어 쓴다면 의도를 파악할 수 있는가?
+
+
+
+
+
+
 
 
 
