clean code : 17장 정리 및 요약

--- a/책/cleancode/정리 및 요약.md
+++ b/책/cleancode/정리 및 요약.md
@@ -13,36 +13,36 @@
 - [5. 형식맞추기](./5.형식맞추기.md)
 - [6. 객체와 자료구조](./6.객체와자료구조.md)
 
-- [7. 오류처리]()
+- 7. 오류처리
     + 오류처리 코드보단 예외를 던질 것
     
     + checked 예외는 OCP를 위반한다.
     
     + *null을 반환하지 말 것*
 
-- [8. 경계]()
+- 8.경계
     + API를 사용할 때는 경계를 깔끔하게 분리하자.
     
     + 경계를 익히고 학습을 통해 비용을 줄인다.
 
 - [9. 단위테스트](./9.단위테스트.md)
 
-- [10.클래스]()
+- [10.클래스](./10.클래스.md)
 
-- [11.시스템]()
+- [11.시스템](./11.시스템.md)
 
-- [12.창발성]()
+- [12.창발성](./12.창발성.md)
 
-- [13.동시성]()
+- [13.동시성](./13.동시성.md)
 
 - [14.점진적인 개선]()
     + 깨끗한 코드를 짜는 것이 어렵다면, 먼저 지저분한 코드를 짠 뒤 점진적으로 개선하면서 정리한다.
     
     + TDD는 점진적인 개선에 좋은 기법이다.
 
-- [15~16 원본 책 참조]()
+- 15~16.원본 책 참조
 
-- [17.냄새와 휴리스틱]()
+- [17.냄새와 휴리스틱](./17.냄새와휴리스틱.md)
 
 
 
