클린코드 이미지 추가

--- a/책/cleancode/정리 및 요약.md
+++ b/책/cleancode/정리 및 요약.md
@@ -1,3 +1,6 @@
+# Clean Code
+
+![클린코드](https://lh3.googleusercontent.com/proxy/fPP-GdvSoTkYl2kGDEZlEfjIZF4jCcY1ISVAgccYbVsSlUTbie6wy_96ZZhCzL2o9yQgUvT3CSCX1uthf--yEdcQwyIrR_FnF-tYiHsgSGnC5nh7wo2gRA)
 
 # 시작하기 앞서서 
 
