--- a/책/cleancode/정리 및 요약.md
+++ b/책/cleancode/정리 및 요약.md
@@ -1,6 +1,6 @@
 # Clean Code
 
-![클린코드](https://lh3.googleusercontent.com/proxy/fPP-GdvSoTkYl2kGDEZlEfjIZF4jCcY1ISVAgccYbVsSlUTbie6wy_96ZZhCzL2o9yQgUvT3CSCX1uthf--yEdcQwyIrR_FnF-tYiHsgSGnC5nh7wo2gRA)
+![클린코드](http://image.yes24.com/goods/11681152/800x0)
 
 # 시작하기 앞서서 
 
