effective java item 2

--- a/책/effective-java/2.객체생성과파괴.md
+++ b/책/effective-java/2.객체생성과파괴.md
@@ -48,5 +48,49 @@ public static <K,V> Map<K,V> unmodifiableMap(Map<? extends K, ? extends V> m) {
 
 
 - https://johngrib.github.io/wiki/static-factory-method-pattern/ 
-        
-        
+               
+#               
+> 아이템 2. 생성자에 매개변수가 많다면 빌더를 고려하라.
+
+- 정적팩토리 메소드나 생성자나 매개변수가 많으면 대응하기 어렵다는 공통점이 있다.
+- 일반적으로 아래와 같은 점층적 생성자 패턴을 많이 사용해왔다.
+
+```java
+public class Student {
+    String name;
+    String phoneNumber;
+    Integer age;
+    String address;
+    
+    public Student(String name, String phoneNumber){
+        this(name, phoneNumber, null);
+    }
+    public Student(String name, String phoneNumber, Integer age){
+        this(name, phoneNumber, age, null);
+    }
+    public Student(String name, String phoneNumber, Integer age, String address){
+        this.name = name;
+        this.phoneNumber = phoneNumber;
+        this.age = age;
+        this.address = address;
+    }
+}
+```
+- 여기서 매개변수가 더 많아지면, 읽기 어렵게 되고 같은 타입의 argument 순서에 따라 오입력 할 수 있다.
+
+- 이외에도 setter를 통한 주입 (자바빈즈 패턴)을 통해 객체를 생성할 수 있다.
+    + 너무 많은 set method를 호출해야 하고, 일관성이 무너진다.(Immutable 하지 않은 클래스)
+    + 마찬 가지로 setMethod를 실수로 누락할 수 있다.
+
+- [빌더 패턴 예제](https://github.com/chulman/TIL/blob/master/design-pattern/%EC%83%9D%EC%84%B1%ED%8C%A8%ED%84%B4/builder.md)
+
+- 빌더 패턴으로 생성된 클래스는 불변성(Immutable)을 갖는다.
+- 빌더 클래스를 추상화해서 계층적으로 설계된 클래스를 생성하고자 할 때 함께 쓰기 좋다.
+- lombok library 등을 사용해서 어노테이션 기반으로 쉽게 사용 할 수 있다.
+
+- 가변 인수 매개변수를 여러개 사용 할 수 있다.
+> Member.builder().name("a").build(); Member.builder().address("서울").name("a").build();
+
+- **성능이 중요시 되는 상황에서는 빌더 패턴의 builder() 생성 비용에 유의해야 하고, 빌더패턴은 불변성을 갖고 매개변수가 많을 때 이점을 갖는다.**
+ 
+
