effective java item 3

--- a/책/effective-java/2.객체생성과파괴.md
+++ b/책/effective-java/2.객체생성과파괴.md
@@ -49,7 +49,7 @@ public static <K,V> Map<K,V> unmodifiableMap(Map<? extends K, ? extends V> m) {
 
 - https://johngrib.github.io/wiki/static-factory-method-pattern/ 
                
-#               
+           
 > 아이템 2. 생성자에 매개변수가 많다면 빌더를 고려하라.
 
 - 정적팩토리 메소드나 생성자나 매개변수가 많으면 대응하기 어렵다는 공통점이 있다.
@@ -93,4 +93,55 @@ public class Student {
 
 - **성능이 중요시 되는 상황에서는 빌더 패턴의 builder() 생성 비용에 유의해야 하고, 빌더패턴은 불변성을 갖고 매개변수가 많을 때 이점을 갖는다.**
  
+               
+> 아이템 3. private 생성자나 열거 타입으로 싱글턴임을 보증하라.
 
+- 싱글턴이란 인스턴스를 오직 하나만 생성할 수 있는 클래스를 말한다.
+
+- private 생성자를 통해 클래스가 싱글턴임을 보증하는 방법
+    + 클래스 내에 해당 클래스가 싱글턴임이 명백히 드러나고 간결하다.
+```java
+ public class Elvis {
+    public static final Elvis INSTANCE = new Elvis();
+    private Elvis() {}
+
+    public void leaveTheBuilding(){}
+}
+
+```
+- 정적 팩토리를 통해 싱글턴임을 보증하는 방법
+    + [참조](https://github.com/chulman/TIL/blob/master/design-pattern/%EC%83%9D%EC%84%B1%ED%8C%A8%ED%84%B4/singleton.md) 
+    + 언제든지 싱글턴 클래스가 아니도록 변경할 수 있다.
+    + 제네릭 싱글턴 클래스로도 바꿀 수 있다.
+    + 자바 8 method reference로 이용할 수 있다.
+    + 직렬화, 역직렬화 과정에서 hash 값이 달라 질 수 있고, 이는 곧 다른 객체임을 뜻한다. 
+        - readResolve 메소드를 통해 해결 할 수 있다. (https://madplay.github.io/post/what-is-readresolve-method-and-writereplace-method)
+        - 직렬화를 수행하는 ObjectStreamClass 에서 Reflection을 통해 readResolve를 수행하도록 하므로 싱글톤 객체를 유지 할 수 있다. 
+    + Reflection 을 통해 Singleton class를 깨트릴 수 있다는 단점이 존재한다.
+```java
+public class SingletonDestroyer {
+    public static void main(String[] args) {
+        Elvis elvis = Elvis.getInstance();
+
+        Constructor[] constructors = elvis.class.getDeclaredConstructors();
+        for (Constructor constructor : constructors) {
+            constructor.setAccessible(true);
+            System.out.println(constructor.newInstance().toString());   // 새로운 Elvis 객체 생성!!!
+            break;
+        }
+    }
+}
+```     
+        
+- 열거(Enum) 타입으로 싱글턴임을 보증하는 방법
+    + 열거 타입은 싱글턴을 구성하는 가장 좋은 방법이다.
+    + Enum 클래스이기에 다른 클래스를 상속받을 수는 없고, 인터페이스를 구현하도록 선언할 수는 있다.
+    + 직렬화/역직렬화 에 대한 처리가 필요없다.
+    + Enum은 원래 태생적으로 Thread에 safe하므로, 객체 생성에 걱정할 필요없다. 
+```java
+public enum Elvis {
+    INSTANCE;
+
+    public void leaveTheBuilding(){}
+}
+```
