effective java item 4

--- a/책/effective-java/2.객체생성과파괴.md
+++ b/책/effective-java/2.객체생성과파괴.md
@@ -145,3 +145,8 @@ public enum Elvis {
     public void leaveTheBuilding(){}
 }
 ```
+
+> 아이템 4. 인스턴스화를 막으려거든 private 생성자를 사용해라.
+- 주로 유틸성 클래스에서 사용된다. 
+- 클래스를 추상 클래스로 만드는 것은 인스턴스화를 막을 수 없다. 상속하면 되니까..
+- 그러므로 private 생성자를 생성하여 인스턴스화를 막고 상속을 구현할 수 없도록 한다.(상위 클래스의 생성자는 접근 불가하므로)
