--- a/책/effective-java/2.객체생성과파괴.md
+++ b/책/effective-java/2.객체생성과파괴.md
@@ -150,3 +150,38 @@ public enum Elvis {
 - 주로 유틸성 클래스에서 사용된다. 
 - 클래스를 추상 클래스로 만드는 것은 인스턴스화를 막을 수 없다. 상속하면 되니까..
 - 그러므로 private 생성자를 생성하여 인스턴스화를 막고 상속을 구현할 수 없도록 한다.(상위 클래스의 생성자는 접근 불가하므로)
+
+
+> 아이템 5. 자원을 직접 명시하지 말고 의존 객체 주입을 사용하라.
+- Dependency Injection 을 사용하라는 의미 (Spring 등 많은 프레임워크에서 DI는 핵심적으로 사용되고 있다.)
+- 의존성 주입된 필드는 불변성을 갖는다.
+- **사용하는 자원에 따라 동작이 달라지는 클래스에는 유틸성, 싱글턴 방식이 적합하지 않다. 자원들을 주입받고 클래스의 유연성과 재사용성, 테스트 용이성을 증가시킬 수 있다.**
+
+- 인스턴스를 생성할 때 생성자에 필요한 자원을 넘겨주는 방식은, 생성자에 주입되는 여러 클래스의 인스턴스를 지원할 수 있어야 한다.
+- [팩토리 매서드 패턴](https://github.com/chulman/TIL/blob/master/de입sign-pattern/%EC%83%9D%EC%84%B1%ED%8C%A8%ED%84%B4/factory-method%2Cabstract-factory.md)는 여러 클래스의 인스턴스를 주입할 수 있는 좋은 방법이다.
+
+```java
+public class ShapeFactory {
+  final static Map<String, Supplier<Shape>> map = new HashMap<>();
+  static {
+    map.put("CIRCLE", Circle::new);
+    map.put("RECTANGLE", Rectangle::new);
+  }   
+    //팩토리 메소드
+  public Supplier<? extends Shape> getShape(String shapeType){
+     return map.get(shapeType.toUpperCase());
+  }
+}
+
+public interface Figure {
+    Shape create(Supplier<? extends Shape> factory);
+}
+
+class FigureImpl extends Figure {
+    @Override
+    public Shae create(Supplier<? extends Shape> factory)  {
+        Shape shape = factory.get();
+        ...
+    }
+}
+```    
