--- a/책/effective-java/2.객체생성과파괴.md
+++ b/책/effective-java/2.객체생성과파괴.md
@@ -1,4 +1,5 @@
 # 객체 생성과 파괴
+<br>
 
 > 아이템 1. 생성자 대신 정적 팩터리 메소드를 고려하라.
 
@@ -47,9 +48,9 @@ public static <K,V> Map<K,V> unmodifiableMap(Map<? extends K, ? extends V> m) {
     + 객체 생성시 생성자를 통해 명확히 알 수 없으니, 정적 팩토리 메소드를 알고 있어야 사용할 수 있다.      
 
 
-- https://johngrib.github.io/wiki/static-factory-method-pattern/ 
-               
-           
+- https://johngrib.github.io/wiki/static-factory-method-pattern/                     
+<br>
+      
 > 아이템 2. 생성자에 매개변수가 많다면 빌더를 고려하라.
 
 - 정적팩토리 메소드나 생성자나 매개변수가 많으면 대응하기 어렵다는 공통점이 있다.
@@ -89,11 +90,14 @@ public class Student {
 - lombok library 등을 사용해서 어노테이션 기반으로 쉽게 사용 할 수 있다.
 
 - 가변 인수 매개변수를 여러개 사용 할 수 있다.
-> Member.builder().name("a").build(); Member.builder().address("서울").name("a").build();
+```java
+    Member.builder().name("a").build(); Member.builder().address("서울").name("a").build();
+``` 
 
 - **성능이 중요시 되는 상황에서는 빌더 패턴의 builder() 생성 비용에 유의해야 하고, 빌더패턴은 불변성을 갖고 매개변수가 많을 때 이점을 갖는다.**
- 
-               
+
+<br>
+              
 > 아이템 3. private 생성자나 열거 타입으로 싱글턴임을 보증하라.
 
 - 싱글턴이란 인스턴스를 오직 하나만 생성할 수 있는 클래스를 말한다.
@@ -144,13 +148,15 @@ public enum Elvis {
 
     public void leaveTheBuilding(){}
 }
-```
+```  
+<br>
 
 > 아이템 4. 인스턴스화를 막으려거든 private 생성자를 사용해라.
 - 주로 유틸성 클래스에서 사용된다. 
 - 클래스를 추상 클래스로 만드는 것은 인스턴스화를 막을 수 없다. 상속하면 되니까..
 - 그러므로 private 생성자를 생성하여 인스턴스화를 막고 상속을 구현할 수 없도록 한다.(상위 클래스의 생성자는 접근 불가하므로)
 
+<br>
 
 > 아이템 5. 자원을 직접 명시하지 말고 의존 객체 주입을 사용하라.
 - Dependency Injection 을 사용하라는 의미 (Spring 등 많은 프레임워크에서 DI는 핵심적으로 사용되고 있다.)
