--- a/책/effective-java/2.객체생성과파괴.md
+++ b/책/effective-java/2.객체생성과파괴.md
@@ -191,3 +191,65 @@ class FigureImpl extends Figure {
     }
 }
 ```    
+
+
+>아이템 6. 불필요한 객체 생성을 피하라
+- anti pattern
+```java
+1. String s = new String("s");
+
+2. "a".matches(regex);
+```
+- matches 메소드는 새로운 객체를 사용할 때마다 생성한다.  다음과 같은 패턴을  사용하자
+```java
+private static final Pattern  patttern = Pattern.compile("*");
+```
+- 객체가 불변이면, 성능 뿐 아니라 코드가 명확해진다.
+
+- Auto Boxing은 불필요힌 객체 생성을 만들어 낸다.
+
+> 아이템 7. 다 쓴 객체 참조를 해제하라.
+- 참조를 해제하는 간단한 방법 : null 주입
+```java
+public Object pop() {
+    if(size==0) throw new EmptyStackException();
+    Object result = elements[--size];
+    elements[size] = null;
+}
+```
+
+- 하지만 null주입은 좋지 않은 방법이고, 가장 좋은 방법은 참조된 객체의 유효범위를 최소화 하는 것이다.(scope)
+- 메모리 누수가 일어 날 수 있는 3가지
+    + null 처리 되지 않은 객체
+    + 캐쉬 객체 : 필요에 따라 weakHashMap 사용
+    + 리스너 혹은 콜백의 사용
+
+> 아이템8. finalizer와 cleaner 사용을 피해라.
+- finalizer는 예측할 수 없고, 상황에 따라 위험해서 일반적으로 불필요하다.
+- cleaner는 Finalizer 보다 덜 위험하지만 여전히 느리고, 예측하기 어렵다.
+
+> 아이템9. try-finally 보다는 try-with-resourse 를 사용해라.
+
+- 일반적으로 사용해왔던 try-catch-finally
+
+```java
+try{
+    ...
+    }catch(Exception e) {
+        ...
+    } finally{
+        ...
+    }
+}
+```
+
+- 효율적인 try-with-resourse
+```java
+try(BufferedReader br = new BufferedReader(new FileReader(path))) {
+    return br.readLine();
+} catch(Exception e) {
+    e.printStackTrace();
+}
+```
+- 직접 close를 명시하지 않아도, AutoCloseable 인터페이스를 확장했기 때문에 try-with-resource를 사용하여 개발자의 실수를 줄여 줄 수 있다.
+- 꼭 회수해야 하는 자원을 다룰 때는 try-finally가 아닌, try-with-resource를 시용하자. 코드는 더 짧고 명확한 메시지를 던진다.
