이펙티브 자바 아이템 11~18 추가

--- a/책/effective-java/3. 모든 객체의 공통 메소드.md
+++ b/책/effective-java/3. 모든 객체의 공통 메소드.md
@@ -20,7 +20,7 @@
         상위 클래스에 없는 상태를 하위 클래스에 추가할 때 주의해야 한다. 
         리스코프 치환 원칙에 따르면 sub type은 언제나 base type을 대체할 수 있어야 한다.
         LSP는 상속의 룰이다. OCP를 위반하지 않도록하는 원칙이다.
-        그러므로 하위 클래스가 상위 클래스를 대체하더라도 동치는 ㄱ ㅏㅌ아야 한다.
+        그러므로 하위 클래스가 상위 클래스를 대체하더라도 동치는 같아야 한다.
   
      ```   
     
@@ -32,5 +32,109 @@
     + equals 재정의 시 hashCode도 재정의 할 것
     + 너무 복잡하게 비교하여 해결하려 하지 말 것(상태 값 중 어떤 것에 대해 비교해야 하는 지 객체 지향적으로 고려하라.)
     + Object 외의 클래스를 매개변수로 받는 equals를 재정의하지 마라.(컴파일도 안된다.)
+
+
+> 아이템 11. equals를 재정의하거든 hashCode도 재정의해라
+
+- equals를 재정의한 클래스 모두 hashCode도 재정의 해야 한다. 그렇지 않으면 hashMap, HashSet 같은 컬렉션의 원소로 쓰일 때 문제가 발생한다.
+
+- Objects 명세의 규약
+```text
+equals 비교에 사용되는 정보가 변경되지 않았다면, 애플리케이션이 실행되는 동안 객체의 hashCode 메소드는 몇번을 호출해도 같은 값을 반환한다.(일관성)
+equals에서 두 객체가 같다고 판단헀다면, 두 객체의 hashCode 값은 같다.
+equals에서 두 객체가 다르다고 판단해도 hashCode의 다른 값을 반환할 필요는 없다.
+```    
     
+- 핵심은 결국 equals는 두 객제의 내용이 같은지 동등성을 비교하고, hashCode는 두 객체가 같은 객체인지 동일성을 비교한다.
+- 주의사항
+    + hashSet, HashMap 등의 원소로 사용 될 때 해당 객체가 Immutable하게 사용해야 한다.
+    + 아래 예제에서 살펴보면 user 객체의 해쉬코드를 put 시점에서만 기억한다. 그러므로 name 필드가 변경됨에 따라 변경된 hashCode를 인식하지 못한다는 점에 주의해야한다. 
+    ```java
+    HashMap<User, Long> map = new HashMap<>();
+    User user = new User("ray");
+    map.put(uesr, 1l);
+
+    user.setName("van");
+    ```
+    + 성능을 높인다고 핵심 필드를 생략하지 말 것
     
+<br>   
+         
+> 아이템 12. toString을 항상 재정의해라.         
+
+- toString의 일반 규약에 따라 '간결하면서 사람이 읽기 쉬운 형태의 유익한 정보'를 반환해야 한다.
+- toString의 규약은 모든 하위 클래스에서 이 메서드를 재정의 하라.
+- toString을 재정의 할 때는 의도를 명확히 할 것
+
+> 아이템 13. clone 재정의는 주의해서 진행하라.
+
+- Cloneable은 복제해도 되는 클래스임을 명시하는 용도의 mixin interface 이지만, 주의해서 사용해야 한다.
+- clone 메소드를 통해 수행하는 일은 해당 필드를 모두 복사(**shallow copy(얕은 복사)**)를 수행하고 새로운 인스턴스를 반환한다. 
+```java
+class Object {
+//native
+...
+ protected native Object clone() throws CloneNotSupportedException;
+}
+/*
+ * @author  unascribed
+ * @see     java.lang.CloneNotSupportedException
+ * @see     java.lang.Object#clone()
+ * @since   JDK1.0
+ */
+public interface Cloneable {
+}
+```
+- object 및 하위 클래스에서 clone 메소드를 수행하면 native 키워드에 의해 JNI로 원시 코드를 같이 수행한다. 
+    + [원시코드 링크- C](http://hg.openjdk.java.net/jdk8u/jdk8u60/jdk/file/afbc08ea922b/src/share/native/java/lang/Object.c#l47)
+
+- clone 메소드의 문제점
+    + Object 클래스 하위에 포함된 protected 접근을 가진 clone 메소드로 구현되어 있다는 점이다. (인터페이스의 유연성을 가지기 쉽지 않다. - 인터페이스의 구현과 함께, Object 클래스를 반드시 상속해야한다.)
+    + 그렇다보니 재정의 된 클래스에서 JNI 코드와 같이 수행하기 위해, super.clone을 반드시 수행해야하는데 이를 뺴먹어도 컴파일 단계에서는 캐치를 하지 않는다!
+    + 이와 같은 원인은, object의 명세에 clone 메소드 규약의 느슨함에 있다.
+    + 모든 객체가 immutable하고, primitve type의 원소를 갖는다면 객체는 완벽한 상태라 clone 메소드는 손볼 일이 없다. 그러나 모든 객체는 그러하지 않다. 
+    + 재정의한 메소드의 반환 타입은 상위 클래스의 메소드가 반환하는 타입의 하위 타입일 수 있음에 주의하자. - 지바는 공변 반환 타이핑을 지원한다. 
+    ```text
+    [  +T ] 공변성 : 타입 T를 확장한 타입에 대해서 허용
+    [   T ] 무공변성 : 타입 T만 허용
+    [  -T ] 반공변성: 타입 T의 상위(부모) 타입에 대해서 허용
+    ```
+    + 적절하지 않은 CloneNotSupportException이 존재한다. (코드 실행 흐름에 있어 uncheckedException으로 재정의 되었어야 한다. - 괴리성이 존재함)     
+    + clone 메소드가 단순히 super.clone 만 호출하게 되면 또다른 문제를 야기한다.(필드가 가변상태일 경우를 deepCopy가 이루어지지 않는다는 점에서)
+
+    
+- clone 메소드의 하는 일은 사실상 생성자의 역할과 같다. 원소에 영향을 미치지 않고 동시에 복제 된 객체의 immutable을 보장해야 한다.(하지만 그렇지 않게 작성될 수 있으니 유의해야한다는 점..)
+- 이러한 점에서 Cloneable 아키텍처에는 허점이 있고 구현된 clone 메소드를 사용할 때는 유의해야 한다.(일부 원소의 불변성을(final 키워드) 제거해야 할 상황이 생긴다.)
+
+- hashTable.Entry 는 deepCopy를 보강한 clone 메소드의 대표적인 예.
+    + 리스트의 길이에 따라 stackOverFlow 를 야기할 수 있는데 recursion을 사용하는 대신 반복자(forEach)를 써서 순회하는 방향으로 수정해야 한다. - 시간 복잡도를 o(n)으로 줄인다.
+
+- 추가 고려 사항
+    + 복잡한 가변 객체를 복사할 때 성능을 고려할 것(high-level의 api는 코드의 우아함을 제공하지만 low-level 메소드에 비해 성능은 보장하지 못할 수 있다.)
+    + clone 메소드를 적절하게 쓰기 위해 throw를 던지지 않는 편이 좋다.(CloneNotSupportedException의 행위 주체는 JNI이다.)
+    + 상속용 클래스에서 Cloneable을 구현하지 말 것
+    + thread safe를 고려할 것
+    + Cloeable을 구현한 메소드는 clone을 재정의하고, public 접근 제한자를 가지며 반환 타입을 자신으로 가질 것
+    + 위의 고려 점을 정적 팩토리 메소드를 통해 해결할 수 있다.
+
+- **나열했다 시피 cloneable 인터페이스를 사용할 떄는 주의해야할 점이 많다. 그러므로 새로운 인터페이스에는 cloneable를 확장해서는 안되고 새로운 클래스를 구현할 때도 상속받지 않는 편이 좋다**
+- **final 클래스라면 cloneable 인터페이스를 고려할 수 있지만, deep copy 및 성능을 고려하여야 하며 정적팩토리 메소드를 통해 구현을 고려해야한다.**
+
+
+<br>
+
+> 아이템 14. comparable을 구현할지 고려하라.
+
+- comparable 인터페이스에는 하나의 메소드(compareTo)를 제공한다.
+    + 왜 comparable 인터페이스는 FunctionalInterface의 특징을 갖지만 FunctionalInterface 어노테이션이 사용되지 않을까?(https://stackoverflow.com/questions/46960642/why-comparable-is-not-declared-as-functionalinterface-in-jdk-1-8-though-it-is-o)
+
+- compareTo는 타입에 대해 equals와 달리 다른 객체를 신경 쓰지 않아도 된다.(예외를 던지면 된다.)
+- compareTo의 메소드로 수행한 동치성은 equals의 결과와 같아야 한다.
+- 제네릭 설정된 compareTo 메소드는 컴파일 시점에 타입이 정해진다.
+- **compareTo 메소드는 각 필드가 동치인지를 비교하는 게 아니라 순서(순서,크기..등 자율성)를 비교한다. Comparable을 구현하지 않은 필드나 표준이 아닌 순서로 비교해야 한다면 Comparator를 사용하라.**
+- compareTo를 구현할 때는 >, < 등호를 사용하지 말고 고수준 api 를 사용하자(Float.comepareTo..)
+- 자바 8 에서는 Comparator 인터페이스(Functional Interface)를 생성자 메소드와 연계하여 간결하게 구현할 수 있지만 약간의 성능저하가 뒤따른다. 
+
+   
+    
+
