--- a/책/effective-java/4. 클래스와 인터페이스.md
+++ b/책/effective-java/4. 클래스와 인터페이스.md
@@ -172,3 +172,50 @@ public void clear() { s.clear(); }
 - wrapper 클래스는 단점이 거의 없지만, 콜백 프레임 워크와 어울리지 않는다.
 - 상속은 반드시 하위 클래스가 상위 클래스의 진짜 하위 타입인 상항에서만 사용해야 한다.
     + 관계로 살펴보면, 상속은 is a 관계이고 컴포지션은 has a 관계
+
+
+> 아이템 19. 상속을 고려해 설계하고 문서화하라. 그러지 않았다면 상속을 금지하라.
+- 상속용 클래스는 재정의 할 수 있는 메소드들을 내부적으로 어떻게 이용하는지 문서로 남겨야 한다.
+- 상속은 캡슐화를 해칠 수 있다.
+- 효율적인 하위 클래스를 큰 어려움 없이 만들 수 있게 하려면 클래스 내부 동작 과정 중간에 끼어들 수 있는 훅을 잘 선별하여 protected 메소드 형태로 공개해야 할 수 도 있다.
+
+- 상속을 허용하는 클래스가 지켜야 하는 몇가지 제약 사항
+    + 상속용 클래스 생성자에서는 직접적으로든 간접적으로든 재정의 가능 메소드를 호출해서는 안된다.
+    + cloneable과 serializable 인터페이스는 상속용 설계의 어려움을 더한다.
+    
+> 아이템 20. 추상클래스보다는 인터페이스를 우선하라.
+- 추상클래스의 제약은 구현 클래스는 반드시 상속받은 클래스여야 한다는 점이다. (이는 자바에서 단일 상속밖에 허용하지 않으므로 큰 제약이다.)
+- 새로운 인터페이스 형태는 추상클래스를 끼워넣는 것보다 쉬운 일이다.
+- 인터페이스로는 계층 구조가 없는 타입 프레임워크를 만들 수 있다.
+- 인터페이스는 추상 클래스에 비해 유연성을 가진다.('믹스인' 이라는 개념과 연관됨.) 
+- 인터페이스와 추상 골격 구현(일반적으로 자바8의 디폴트 메소드를 사용한) 클래스를 함께 제공하는 식으로 인터페이스와 추상 클래스의 장점을 모두 취할 수 있다.
+
+
+> 아이템 21. 인터페이스는 구현하는 쪽을 생각해 설계해라.
+
+- 자바 8 이전에는 기존 구현체를 깨뜨리지 않고 인터페이스에 메소드를 추가하는 방법은 존재하지 않았다. 하지만 자바8의 디폴트 메소드는 위험성을 완전히 없애주지 않는다.
+- 생각할 수 있는 모든 상황에서 불변(Immutable)식을 해치지 않는 디폴트 메소드를 작성하기는 어려운 일이다.
+```java
+interface Calculator {
+    double calculate(double a, double b);
+
+    default int add(double a, double b) {
+        return a+b;
+    }
+}
+
+class StringCalculator implements Calculator {
+    double calculate(double a, double b){
+        ..
+    }
+}
+```
+- 책에서는 Collection 인터페이스의 예를 들었는데, 미리 default 메소드가 정의 되었더라도 구현된 클래스에 인터페이스가 포함하지 않은 또 다른 제약사항이 생긴다면 인터페이스는 이 문제를 해결할 책임을 가지지 않게 된다.
+    + 예를 들면 동기화-synchronized- 자바 8의 default 메소드에 synchronized 키워드는 허용되지 않는다.(https://stackoverflow.com/questions/23453568/what-is-the-reason-why-synchronized-is-not-allowed-in-java-8-interface-methods) 
+- 즉 디폴트 메소드는 컴파일 시점에 오류가 발생하지 않았더라도, 런타임 시점에 구현되는 클래스에 따라 예외를 발생시 킬 수 있는 잠재적인 위험요소를 가지고 있다. 
+- 핵심은 디폴트 메소드라는 좋은 도구가 생겼더라도, 인터페이스를 설계할 때는 여전히 주의해서 설계해야 한다는 점이다.(디폴트 메소드가 만능이라고 생각하지 말자.)
+- 인터페이스를 릴리즈하고 수정해도 되지만, 그 가능성에 기대지 말고 좋은 설계를 해라. 
+
+
+> 아이템 22. 인터페이스는 타입을 정의하는 용도로만 사용해라.     
+    
