--- a/책/effective-java/3. 모든 객체의 공통 메소드.md
+++ b/책/effective-java/3. 모든 객체의 공통 메소드.md
@@ -126,7 +126,9 @@ public interface Cloneable {
 > 아이템 14. comparable을 구현할지 고려하라.
 
 - comparable 인터페이스에는 하나의 메소드(compareTo)를 제공한다.
-    + 왜 comparable 인터페이스는 FunctionalInterface의 특징을 갖지만 FunctionalInterface 어노테이션이 사용되지 않을까?(https://stackoverflow.com/questions/46960642/why-comparable-is-not-declared-as-functionalinterface-in-jdk-1-8-though-it-is-o)
+    + 왜 comparable 인터페이스는 FunctionalInterface의 특징을 갖지만 FunctionalInterface 어노테이션이 사용되지 않을까?
+    + https://stackoverflow.com/questions/46960642/why-comparable-is-not-declared-as-functionalinterface-in-jdk-1-8-though-it-is-o
+    + https://www.notion.so/Comparable-7d4b4dd2550444cb9b9a93e4047e94d1
 
 - compareTo는 타입에 대해 equals와 달리 다른 객체를 신경 쓰지 않아도 된다.(예외를 던지면 된다.)
 - compareTo의 메소드로 수행한 동치성은 equals의 결과와 같아야 한다.
