--- a/책/effective-java/4. 클래스와 인터페이스.md
+++ b/책/effective-java/4. 클래스와 인터페이스.md
@@ -36,7 +36,7 @@ public class User {
     } 
 }
 ```
-- private와 package-private 멤버는 해당 클래스의 구현에 해당하므로 공개 api에 영향을 주지 않는다. 하지만 serializable을 구현한 클래스는 필드를 의도치 않게 공개할 수도 있다.(직렬화의 순서의 중요성에 따라)
+- private와 package-private 멤버는 해당 클래스의 구현에 해당하므로 공개 api에 영향을 주지 않는다. 하지만 serializable을 구현한 클래스는 필드를 의도치 않게 공개할 수도 있다.
 - 멤버의 접근 수준을 protected로 바꾸는 순간 범위는 넓어질 수 있으므로, protected 범위는 최소한으로 하자.
 - 리스코프 치환 원칙(LSP)에 따라 하위 클래스에서 상위 클래스의 범위보다 좁게 설정할 수 없을 수 있다.
 
