--- a/책/effective-java/4. 클래스와 인터페이스.md
+++ b/책/effective-java/4. 클래스와 인터페이스.md
@@ -219,3 +219,74 @@ class StringCalculator implements Calculator {
 
 > 아이템 22. 인터페이스는 타입을 정의하는 용도로만 사용해라.     
     
+- 인터페이스를 잘못 사용하는 예
+    + 상수형 인터페이스
+
+
+> 아이템 23. 태그 달린 클래스보다는 클래스 계층구조를 활용하라.
+
+- 태그 달린 클래스 : 2가지 이상의 기능 혹은 의미를 담는 클래스
+- 열거 타입 선언, 태그(2개 이상의 의미가 표현가능한) 필드, 불필요한 조건문의 단점이 생길 수 있다.
+- 가독성이 나쁘고, 장황하며, 오류를 내기 쉽다.
+- 계층 구조로 설계된 클래스는 깔끔하고, 런타임 오류 발생이 적으며 타입 사이의 자연스러운 관계로 타입 검사 능력을 높여준다.
+
+
+> 아이템 24. 멤버 클래스는 되도록 static으로 만들어라.
+
+- 중첩 클래스는 다른 클래스 안에 정의된 클래스를 말한다.
+- 중첩 클래스에는 정적 멤버 클래스, 멤버 클래스, 익명 클래스, 지역 클래스가 존재하며, 정적 멤버 클래스를 제외하고 모두 내부 클래스에 해당한다.
+    + 익명 클래스: 멤버 클래스와 달리 쓰이는 시점에 인스턴스가 선언되고 생성된다. 또한 정적 문법에 상수 변수 이외의 멤버를 가질 수 없다.
+            + 익명 클래스는 제약이 많다. 여러 인터페이스를 구현할 수도 없고, 상속도 불가능하며 짧지 않으면 가독성이 떨어진다.
+    + 지역 클래스: 가장 드물게 사용되고, 지역변수가 선언된 어느 곳에서든지 사용되며, 스코프도 지역변수가 같다. 
+    + 정적 멤버 클래스: 흔히 감싸여진 클래스의 helper 클래스로 작동한다. ex) Caculator.OPERATOR 클래스
+        + 비정적 멤버 클래스의 인스턴스는 바깥 클래스의 인스턴스와 암묵적으로 연결된다. 그러므로 중첩클래스의 인스턴스가 독립적으로 존재하기 위해 정적 멤버 클래스로 만들어야 한다.
+    + 비정적 멤버 클래스: 어떤 클래스의 인스턴스를 감싸 마치 다른 클래스의 인스턴스처럼 보이게하는 뷰로 사용한다.
+```java
+public class MySet<E> extends AbstractSet<E> {
+    @Override public Iterator<E> iterator() {
+        return new MyIterator();
+    }
+    private class MyIterator implements Iterator<E> {
+       ... 
+    }
+}
+```
+- 멤버 클래스가 바깥 인스턴스에 접근할 일이 없다면, 반드시 static을 붙여서 정적 멤버 클래스로 만들어 숨은 외부 참조를 없애야 한다. 숨은 참조의 예) instance.new InternerClass();
+- 숨은 참조는 시간과 공간이 더 많이 소요되며, 가비지 컬렉션이 바깥 클래스 인스턴스를 수거하지 못하는 메모리 누수가 발생할 수 있다.
+- 참조가 눈에 보이지 않으니 문제 해결도 어렵다.
+
+> 아이템 25. 톱레벨 클래스는 한 파일에 하나만 담으라.
+
+- 소스 파일에 클래스를 여러 개 담아도 컴파일 상에 문제는 없다. 하지만 득은 없고 실은 있을 수 있다.
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        System.out.println(Utensil.NAME + Dessert.NAME);
+    }
+}
+
+// Utensil.java 에 정의
+class Utensil {
+    static final String NAME = "pan";
+}
+
+class Dessert {
+    static final String NAME = "cake";
+}
+// Dessert.java 에 정의
+
+class Dessert {
+    static final String NAME = "pie";
+}
+
+class Utensil {
+    static final String NAME = "pot";
+}
+
+```
+- 위의 코드를 같이 컴파일 하면, 당연하게도 컴파일 오류가 발생한다.
+- 한파일 안에 같이 작성했을 때, javac 명령을 통해 수행한다면 컴파일 순서에 따라 어떻게 하느냐에 따라 동작이 달라지거나 컴파일 오류가 발생할 수 있다.
+    + ex) 메인 클래스에는 utensil.java 클래스가 참조되어 있다고 가정할 경우 javac main.java, javac dessert.java main.java .. 결과는 모두 다르다.
+
+- 해결책은 톱 클래스 파일을 모두 분리하면 된다. 한 파일에 담고 싶다면, 최소 접근 범위(private) 를 갖는 정적 멤버 클래스를 고려하자.   
