--- a/책/effective-java/5. 제네릭.md
+++ b/책/effective-java/5. 제네릭.md
@@ -166,4 +166,105 @@ public static <E extends Comparable<T>> E max(Collection<E> c);
     + E에 대해 설정되는 타입은 Comparable을 구현한 구현체일 것이고, compareTo를 구현한 클래스에 대해서만 타입 매개 변수로 사용가능하다. 즉 자기자신과 비교될 수 있는 모든 타입 T 
 - 재귀적 한정 타입은 훨씬 복잡해질 가능성이 있지만, 그런일은 잘 일어나지 않는다.
 
-> 아이템31. 한정적 와일드 카드를 통해 와일드 카드의 효율성을 높여라.
+> 아이템 31. 한정적 와일드 카드를 통해 와일드 카드의 효율성을 높여라.
+- 앞서 주구장창 설명했듯이 제네릭에서 타입은 불공변이다. 하지만 유연성을 높이기 위해 무언가 필요한데, 와일드 카드는 좋은 방법 이 될 수있다.
+- 소비자(메서드에 제공되어 메서드 내에서 제공되는 객체를 자기 자신이 사용하는) 와일드 카드, 생산자(파라미터로 제공되어 메서드 내에서 사용 될 객체를 공급해 줄 수 있는) 와일드 카드를 적용하는 방법은 다음과 같다.
+```java
+//소비자 와일드 카드
+public void popAll(Collection<? super E> dst) {
+  while(!isEmpty()) {
+    dst.add(pop());
+  }
+```
+```java
+// 생산자 와일드 카드
+public void pushAll(Iterator<? extends E> iterator) {
+  for (E e : iterator) {
+    push(e);
+  }
+}
+```
+- 유연성을 극대화하려면, 원소의 생산자나 소비자용 입력 매개변수에 와일드 카드 타입을 사용하라.
+
+> 아이템 32. 제네릭과 가변인수를 함께 쓸 때는 신중하라.
+- 가변인수 메소드와 제네릭은 서로 잘 어울리지 않는다.
+- 가변 인수 내부적으로 보면, 호출 할 때 배열하나가 자동으로 만들어진다. 클라이언트에 노출하는 문제가 있고, 제네릭이나 매개변수화 타입이 포함되면 확인하기 어려운 컴파일 경고가 생긴다.
+    + 실체화 불가타입으로 varargs 매개변수를 선언하면 컴파일러가 힙오염에 대한 경고를 보낸다.
+    + 이렇듯, 매개변수화 타입의 변수가 타입이 다른 객체를 참조하면 힙오염을 발생시킬 것 이다.
+```java
+static void dangerous(List<String>... stringLists) {
+    List<Integer> intList = List.of(42);
+    Object[] objects = stringLists;
+    objects[0] = intList; // heap 오염
+    String s = stringLists[0].get(0);  // classCastException
+}
+```
+- 이처럼 타입 안정성이 꺠질 가능성이 있으니 제네릭 가변인수 배열 매개변수에 값을 저장하는 일은 안전하지 않다.
+- 위처럼 안전하지 않을 수 있음에도 허용하는 이유는 매우 유용하기 떄문이다. ex) Arrays.asList(T... a)
+- 자바 7 이전에는 이러한 경고를 숨기기 위해 @SupressWarning을 써야 했지만, 자바7 이후 @SafeVarargs 메소드를 통해 대체 될 수 있다.
+- @SafeArgs 애노테이션은 메소드 작성자가 그 메소드가 타입 안전함을 보장하는 주석이다. (확실하지 않으면 사용하지 않아야 한다)
+- 안전을 확인하러면..
+    + 가변인수 메소드를 호출 할 때 제네릭 배열이 만든다는 것을 기억하자.
+    + 이 배열에 아무것도 저장하지 않고, 배열의 참조가 외부로 노출되지 않으면 타입 안전하다. => Immutable 해야한다고 생각한다.
+```java
+// 위험한 코드 - 배열이 외부로 노출되며 배열이 변할 수 있고 이에 따라 힙오염이 발생할 수 있다.
+static <T> T[] toArray(T... args) {
+    return args;
+}
+```
+
+- 구체적으로 보면..
+```java
+static <T> T[] pickTwo(T a, T b, T c) {
+    switch(ThreadLocalRandom.current().nextInt(3)) {
+        case 0: return toArray(a,c);
+        case 1: return toArray(a,b);
+        case 2: return toArray(b,c);
+    }
+}
+
+static void main(String... args) {
+    String[] attributes = pickTwo("좋은", "발빠른", "저렴한");
+} 
+```
+- 위의 메소드는 runtime 단계에서 classCastException이 발생한다.(toArray를 return 하는 과정에서 Object[] -> String[])
+- 위의 예제는 제네릭 varargs 매개변수 배열에 다른 메소드가 접근허용하도록 하면 안전하지 않다는 것을 다시 생각하게한다.
+
+- varargs 매개변수와 제네릭을 같이 사용할 때 두가지는 반드시 지키자.
+    + varargs 매개변수 배열에 아무것도 저장하지 않는다.
+    + 그 배열을 신뢰할 수 없는 코드에 노출하지 않는다.
+
+> 아이템 33. 타입 안전 이종 컨테이너를 고려하라.
+- 제네릭에서 일반적으로 매개변수화되는 대상은 컨테이너 혹은 컬렉션 자신이다. ex) Set<E>, ThreadLocal<T>...
+- 따라서 매개변수화 할 타입은 제한된다. 더 유연하게 할 필요가 종종 있는데 타입 안전 이종 컨테이너 패턴을 사용하면 해결된다.
+- 타입 안전 이종 컨테이너 패턴 : 컨테이너 대신 키를 매개변수화한 다음 컨테이너에 값을 넣거나, 뺄때 키 타입을 제공해주는 패턴
+
+```java
+//타입 안전 이종 컨테이너 패턴
+public class Favorites {
+    private Map<Class<?>, Object> favorites = new HashMap<>();
+    
+    public <T> void putFavorite(Class<T> type, T instance){
+        favorites.put(Objects.requireNonNull(type), instance);
+    }
+    public <T> T getFavorite(Class<T> type){
+        return type.cast(favorites.get(type));
+    }   
+}
+```
+- 위의 코드에서 모든 값이 키로 명시한 타입임을 보증하지 않는다. (자바의 타입 시스템에서 이 관계를 명시할 방법은 없다.)
+- getFavorite 메소드는 class 클래스가 제네릭이라는 점을 훌륭히 활용한 예이며, 타입이 일치하지 않으면 classCastException이 발생한다.
+- 이러한 위험은 hashSet 혹은 hashMap등의 일반 컬렉션 구현체에도 똑같이 발생한다.(로타입을 사용한 경우..)
+- Collections에는 checkedSet, checkedList... 같은 메소드가 위와 같은 방식으로 구현한 컬렉션 래퍼다.
+- 이 래퍼들은 제네릭과 로타입을 섞어 사용하는 애플리케이션에서 잘못된 타입의 웒소를 넣지 못하게 추적하는데 도움을 준다.
+- Favorite 클래스의 또다른 제약은 실체화 불가 타입에는 사용할 수 없다는 것이다. ex) List<String>
+    + 위와 같은 문제를 해결할 수 있는 방법 - [슈퍼타입 토큰](https://www.baeldung.com/java-super-type-tokens)
+- Favorite 클래스들은 비한정적인데 한정적으로 활용하려면, 한정적 타입 매개변수(<T extends Some>) 혹은 한정적 와일드 카드<? extends Some>를 사용하여 제한할 수 있다.
+
+- annotation api는 한정적 타입 토큰을 적극적으로 활용한다.
+```java
+public <T extends Annotation> T getAnnotation(Class<T> annotationType);
+```
+- 위 메소드는 토큰으로 명시한 타입의 애노테이션이 대상 요소에 달려 있다면 에노테이션(인터페이스)을 반환하고, 없다면 null을 반환한다. 즉 애노테이션된 요소는 그 키가 애노테이션 타입인 타입 안전 이종 컨테이너이다.
+- class<?> 타입의 객체가 있고 한정적 타입 토큰을 받는 메소드에 넘기는 방법은 asSubClass 메소드를 호출하면 간단히 해결된다.
+    + <? extends Annotation>은 경고를 유발한다. assSubClass 메소드는 경고없이 컴파일되며 잘못될 시 classCastException을 던진다.
