--- a/책/effective-java/6. 열거타입과 애너테이션.md
+++ b/책/effective-java/6. 열거타입과 애너테이션.md
@@ -160,3 +160,118 @@ enum PayRollDay {
 
 - **필요한 원소를 컴파일타임에 다 알 수 있는 상수 집합이면 항상 열거 타입을 사용하자**
 - 열거 타입에 정의된 상수 개수가 영원히 고정 불변일 필요는 없다. 나중에 언제든지 추가되도 바이너리 수준에서 호환되도록 설계되었다.
+
+> 아이템 35. ordinal 메소드 대신 인스턴스 필드를 사용해라.
+
+- 열거 타입 상수에 연결된 값은 ordinal 메소드로 연결하지 말고, 인스턴스 필드로 설정하자.
+- Enum의 API 문서에 따르면 ordinal에 대해 다음과 같이 기술한다.
+    + 이 메소드는 EnumSet과 EnumMap 같이 열거 타입 기반의 범용 자료구조에 쓸 목적으로 설계되었다.
+    
+> 아이템 36. 비트 필드 대신 EnumSet을 사용해라.
+
+- 열거한 값들이 주로 집합으로 사용될 경우 예전에는 2의 거듭 제곱 값을 할당한 정수 열거 패턴을 사용해 왔다.
+- 비트 필드 값이 그대로 출력되면 단순한 정서 열구 상수를 출력할 때보다 해석하기 훨씬 어렵다.
+- 또한 얼마나 값을 표현해야하는지에 따라 int, long에 대해 예측해야 한다.
+
+- EnumSet 클래스는 열거타입 상수의 값으로 구성된 집합을 효과적으로 표현해준다.
+
+```java
+public class Text {
+    public enum Style { BOLD, ITALIC}
+
+    public void applyStyle(Set<STyle> styles){..}
+
+    public static void main(String[] args){
+      new Text().applyStyle(EnumSet.of(Style.BOLD, Style.ITALIC));
+    }
+}
+```
+
+- 열거할 수 있는 타입을 한데 모아 집합 형태로 사용한다고해도 비트 필드를 사용할 이유가 없다. EnumSet을 사용해라.
+- EnumSet의 단점은 불변성을 만들수 없다는 점이다. 보완하기 위해 Collections.unmodifiableSet으로 감쌀수는 있다.
+
+> 아이템 37. ordinal 인덱싱 대신 EnumMap을 사용해라.
+
+- 가끔씩 배열이나 리스트에서 원소를 꺼낼 때 Ordinal 메소드로 인덱스를 얻는 코드가 있다.
+```java
+...
+for(Plant p: garden) {
+    plantsByLifeCycle[p.lifeCycle.ordinal()].add(p);
+}
+```
+
+- 동작은 하지만 제네릭과 호환되지 않으니 비검사 형변환을 수행해야 하고 깔끔히 컴파일 되지 않을 수 있다. 또한 정수값을 사용한다는 것을 직접 보증해야한다.
+- EnumMap을 통해 열거타입을 키로 매핑할 수 있다. EnumMap의 내부적으로 배열을 구현하기에 성능에도 문제가 없다.
+- Stream을 사용하면 코드를 더 줄일 수 있다.
+- ordinal과 배열 인덱스의 관계를 알 수 없기에 기존 열거타입을 수정하면서 배열도 함께 변경하지 않으면 문제가 발생할 확률이 높다.
+- 그러므로 EnumMap 혹은 stream을 사용하자
+
+> 아이템 38. 확장할 수 있는 열거타입이 필요하면 인터페이스를 사용하라.
+- 열거타입은 안전하다. 하지만 확장할 수 없다.
+- 열거타입은 확장하기에는 좋지 않다. 복잡해지고 기반 열거 타입 <-> 확장 열거타입 간의 같은 원소로 취급하려는 포함관계가 이상해진다.
+- 예외는 있는데 앞선 예제의 Operation 이다.
+
+```java
+public interface Operation {
+    double apply(double x, double y);
+}
+
+
+public enum BasicOperation implements Operation {
+    ...
+}
+```
+- 위와 같이 구성하면, 열거타입은 확장하지 못하지만 Operation 인터페이스는 확장할 수 있다.
+- 한가지 문제점이 있는데 열거타입끼리 구현을 상속할 수 없다는 점이다. (큰 문제는 아닐듯 이렇게 쓰는게 오버)
+- 또한 아무 상태에도 의존하지 않는 경우 default 메소드를 인터페이스에 추가하는 방법도 있다.
+
+> 아이템 39. 명명 패턴보다 어노테이션을 사용해라.
+
+- 명명패턴은 이름으로 규정하여 특정 행위를 하도록 하는 패턴. 예를 들면 junit3에서는 test 메소드에 반드시 test를 붙여야했음.
+    + 단점1. 오타가 나면안된다.
+    + 단점2. 올바름 프로그램 요소에만 사용되리라 보증할 수 없다.(클래스에 Test를 붙인다고 메소드 전체가 실행되지 않음)
+    + 프로그램 매개변수 요소로 전달할 방법이 없다.
+
+- 어노테이션은 이와 같은 단점을 극복하게 한다.
+```java
+@Retention(RetensionPolicy.RUNTIME)
+@Target(ElementType.METHOD)
+public @interface Test {
+}
+``` 
+
+- @Retention 어노테이션은 @Test가 런타임에도 유지되어야 한다는 표시다.
+- @Target 어노테이션은 메소드에서만 사용돼어야 한다고 표시한다.
+- 위와 같은 어노테이션은 마커 애노테이션 이라 한다.(아무 매개변수 없이 단순히 대상에 마킹한다.)
+
+- 다음 예는 특정 예외를 던저야만 테스트가 성공하는 어노테이션이다.
+```java
+@Retention(RetensionPolicy.RUNTIME)
+@Target(ElementType.METHOD)
+public @interface ExceptionTest {
+    Class <? extends Throwable> value();
+}
+```
+
+- 자바8 부터는 여러개의 값을 받는 어노테이션을 다른 방식으로도 만들 수 있다. 배열 매개 변수를 사용하는 대신 @Repeatable 메타 어노테이션을 달면된다.
+    + 주의 할 점은 @Repeatable을 단 어노테이션을 반환하는 컨테이너 애노테이션을 하나 더 정의하고, @Repeatable에 class 객체를 매개변수로 전달하고 Value 메소드를 정의해야한다.
+```java
+@Retention(RetensionPolicy.RUNTIME)
+@Target(ElementType.METHOD)
+@Repeatable(ExceptionTestContainer.class)
+public @interface ExceptionTest {
+    Class <? extends Throwable> value();
+}
+@Retention(RetensionPolicy.RUNTIME)
+@Target(ElementType.METHOD)
+public @interface ExceptionTestContainer {
+    ExceptionTest[] value();
+}
+
+@ExceptionTest(NullPointerException.class)
+@ExceptionTest(IndexOutOfBoundsException.class)
+public static void doubleBad() ...
+```
+
+- 여러 에를 들었지만 핵심은 어노테이션으로 할 수 있는 일을 명명 패턴으로 처리할 이유는 없다.
+- 자바 프로그래머라면 예외 없이 자바가 제공하는 어노테이션 타입들을 사용할 수 있어야 한다.
