--- a/책/effective-java/6. 열거타입과 애너테이션.md
+++ b/책/effective-java/6. 열거타입과 애너테이션.md
@@ -275,3 +275,46 @@ public static void doubleBad() ...
 
 - 여러 에를 들었지만 핵심은 어노테이션으로 할 수 있는 일을 명명 패턴으로 처리할 이유는 없다.
 - 자바 프로그래머라면 예외 없이 자바가 제공하는 어노테이션 타입들을 사용할 수 있어야 한다.
+
+> 아이템 40. @Override 어노테이션을 일관되게 사용하라.
+- 자바가 기본으로 제공하는 애노테이션 중 보통의 프로그래머에게 가장 중요한 것은 @Override 이다.
+- 이 애노테이션을 일관되게 사용하면 여러 악명 높은 버그를 예방한다.
+    + ex) equals 메소드를 새로 생성했는데 오버로딩 되어 버려서 Collection 연산에 적용되지 않은 예
+    
+- 그러므로 상위 클래스의 메소드를 재정의하려는 모든 메소드에 @Override 애노테이션을 달자.
+- 예외는 한 가지다. 구체(구현) 클래스에서 상위 클래스의 추상메소드를 재정의 할 떄는 굳이 @Override를 달지 않아도 된다.
+    + 컴파일 단계에서 알아서 바로 알려준다.
+- IDE 자체에서도 warning을 통해 일관되게 사용하도록 경고한다.
+
+> 아이템 41. 정의하려는 것이 타입이라면 마커 인터페이스를 사용해라.
+- 마커 인터페이스 : 아무 메소드도 담지 않고 단지 자신을 구현하는클래스가 특정 속성을 가짐을 표시해주는 인터페이스
+    + ex) Serializable 인터페이스 - 자신을 구현할 클래스의 인스턴스는 ObjectOutputStream 을 통해 쓸 수 있다고, 즉 직렬화 할 수 있다고 아려준다.
+    
+- 마커 인터페이스는 두가지 면에서 마커 애노테이션 보다 낫다.
+    + 1. 마커 인터페이스는 이를 구현한 클래스의 인스턴스들을 구분하는 타입으로 쓸수 있으나, 어노테이션을 그렇지 않다. 
+        + 어노테이션은 런타임에야 오류를 검출하는데 인터페이스는 컴파일 단계에서 검출 가능하다.
+        + ObjectOutputStream은 잘못 사용한 예인데, 마커 인터페이스임에도 불구하고 직렬화 할 수 없는 객체를 입력가능하도록 설계되어 런타임에야 오류가 검출된다.
+    + 2. 적용대상을 더 정밀하게 지정할 수 있다.
+        + 마커 애노테이션을 @Target(@ElementType.TYPE) 으로 선언하면 모든 타입에 달 수 있다. 하지만 세밀하게 지정하지 못할 수 있다.(클래스, 인터페이스.. 등)
+        + 마커 인터페이스는 그냥 클래스에만 그 인터페이스를 구현하면 된다.
+
+- 동의 하지 않을 수 있는 사람들도 있으나 Set 인터페이스도 마커 인터페이스로 볼 수 있다.(제약이 있는)
+    + Set은 Collection이 정의한 메소드 이외에는 새로 추가한 것이 없다.
+    + add, equals, hashCode를 살짝 수정했기 때문에 마커 인터페이스라고 생각하지 않을 수 있다.
+    + 하지만 특정 인터페이스 하위 타입에만 적용할 수 있으며, 아무 규약에도 손대지 않은 마커 인터페이스라고 할 수 있겠다.
+    
+- 마커 인터페이스는 객체의 특정 부분을 불변식으로 규정하거나, 그 타입의 인스턴스는 다른 클래스의 특정 메소드가 처리할 수 있다는 사실을 명시하는 용도로 사용할수도 있을 것이다.
+
+- 반대로 마커 애노테이션이 나은 점은 거대한 애노테이션 시스템의 지원을 받는 다는 점이다.
+
+- 굳이 사용 분류를 짓는 다면 다음과 같다.
+    + 클래스와 인터페이스 외 프로그램 요소*패키지, 모듈, 필드, 지역변수) 에는 애노테이션을 쓸수 밖에 없다.
+    + 마커 인터페이스는 인터페이스와 클래스에서만 쓸 수 있다.
+    + 마커를 클래스나 인터페이스에 적용해야 한다면, 마킹이 매개변수로 받는 메소드를 작성할 일이 있을까 생각해보자.
+        + 있다면 마커 인터페이스를 쓰는 것이 좋을 수 있다. 앞서 말했듯이 컴파일 단계에서 오류 검출을 잡아내는 것은 큰 장점이다.
+
+- 추가로 애노테이션 작성이 활발한 프레임워크(ex. 스프링)에서 사용하려한다면 당연하게도 애노테이션을 쓰는게 좋을 것이다.(프레임워크의 지원, 확장성 등)
+
+- 개인적인 의견으로 런타임 시 오류(이건 개발자가 주의해야 함)를 제외하고 모든 면에서 애노테이션이 나은 것 같다고 생각하며 가장 큰 장점은 편리성인 것 같다.
+
+- 위와 같은 면에서 저자는 다음과 같이 뒤집는다. **타입을 정의할 것이 아니라면 마커 인터페이스를 사용하지 말라**
