아이템 42 추가 정리

--- a/책/effective-java/7. 람다와스트림.md
+++ b/책/effective-java/7. 람다와스트림.md
@@ -1,4 +1,4 @@
-> 아이템템42. 익명클래스보다는 람다를 사용하라.
+> 아이템42. 익명클래스보다는 람다를 사용하라.
 
 - 예전에는 추상 메소드를 하나만 담은 인터페이스를 사용했다.
 - 이런 인터페이스의 인스턴스를 함수 객체라고 하여 특정 함수나 동작을 나타내는데 사용했다.
@@ -30,10 +30,14 @@ Collections.sort(wordss, compareInt(String::length));
 words.sort(ComparingInt(String::length));
 ```
 
-- 과거 Operation의 예를 참조해보면, 람다와 메소드 레퍼런스를 사용하여 더 깔끔하게 Enum 클래스를 구성할 수 있다.
+- 과거 [Operation](../effective-java/6.%20열거타입과%20애너테이션.md)의 예를 참조해보면, 람다와 메소드 레퍼런스를 사용하여 더 깔끔하게 Enum 클래스를 구성할 수 있다.
 
 - **람다는 이름이 없고 문서화도 못한다. 따라서 코드 자체로 동작이 명확히 설명되지 않거나 코드 줄 수가 많아 지면 람다를 쓰지말아야한다.**
     + 람다는 한줄일 때 가장 좋고 3줄안에 끝내야한다.
     + 열거타입의 생성자안에서 람다는 열거 타입의 인스턴스 멤버에 접근할 수 없다.
 
 - 람다는 함수형 인터페이스에만 쓰인다. 따라서, 추상 클래스의 인스턴스를 만들 때 람다를 쓸 수 없으며 익명 클래스를 써야한다.
+- 비슷하게 추상 메소드 여러개인 인터페이스의 인스턴스를 만들 때도 익명 클래스를 쓸 수 있다.
+- 마지막으로 람다는 자기 자신을 참조할 수 없다.(람다에서 this는 바깥 인스턴스를 참조한다.)
+- 람다도 익명 클래스처럼 직렬화 형태가 구현별로 다를 수 있다. 따라서 람다를 직렬화하는 일은 극히 삼가해야한다.
+- 직렬화해야하는 함수 객체가 있다면 private 정적 중첩 클래스의 인스턴스를 사용하자.
