--- a/책/effective-java/7. 람다와스트림.md
+++ b/책/effective-java/7. 람다와스트림.md
@@ -41,3 +41,33 @@ words.sort(ComparingInt(String::length));
 - 마지막으로 람다는 자기 자신을 참조할 수 없다.(람다에서 this는 바깥 인스턴스를 참조한다.)
 - 람다도 익명 클래스처럼 직렬화 형태가 구현별로 다를 수 있다. 따라서 람다를 직렬화하는 일은 극히 삼가해야한다.
 - 직렬화해야하는 함수 객체가 있다면 private 정적 중첩 클래스의 인스턴스를 사용하자.
+
+
+> 아이템43. 람다보다는 메소드 참조를 사용해라.
+
+- 람다가 익명클래스보다 나은점은 간결함이다. 자바8에서 더 간결함을 가진 방법은 메소드 참조다.
+- 하지만 메소드 참조가 반드시 좋은 것은 아니다. 어떤 람다는 매개변수의 이름 자제초 프로그래머에게 좋은 가이드를 제공한다.
+- 대부분 케이스에서 람다가 할 수 없는 일은 메소드 레퍼런스도 할 수 없다.
+- 메소드 레퍼런스 참조 유형은 5가지가 존재한다.
+    + 1. 정적 메소드 참조 : Integer::parseInt
+    + 2. 한정적(인스턴스) 참조 : Instant.now()::isAfter 
+        - 수신 객체를 특정함
+        - 함수가 받는 인수와 참조하는 인수가 같다.
+        - 정적 참조와 비슷함
+    + 3. 비한정적 참조 : String::toLowerCase 
+        - 수신 객체를 특정하지 않음
+        - 주로 스트림 파이프라인에서 사용됨
+        - 함수 객체를 적용하는 시점에 수신 객체를 알려줌
+    + 4. 클래스 생성자 : String::new
+    + 5. 배열 생성자 : Int[]::new
+
+- **메소드참조가 명확하면 메소드 참조를 쓰고, 람다가 짧고 명확하면 람다를 써라**
+
+> 아이템44. 표준 함수형 인터페이스를 사용하라
+
+- 자바가 람다를 지원하면서, 과거의 API와 디자인패턴 등을 사용 등의 변화가 발생했다. 
+    + 예를 들어 상위 클래스의 메소드를 재정의하는 템플릿 메소드 패턴의 매력이 크게 줄었다.
+    + 함수형 프로그래밍의 핵심은 함수. 잘 작성된 함수는 클래스보다 더 좋은 효과를 낼 수 있다.
+    + 이를 대체하는 현대적인 해법은 같은 효과의 함수 객체르 받는 정적팩터리나 생성자를 제공하는 것이다.
+
+- 
