--- a/책/effective-java/7. 람다와스트림.md
+++ b/책/effective-java/7. 람다와스트림.md
@@ -51,13 +51,13 @@ words.sort(ComparingInt(String::length));
 - 메소드 레퍼런스 참조 유형은 5가지가 존재한다.
     + 1. 정적 메소드 참조 : Integer::parseInt
     + 2. 한정적(인스턴스) 참조 : Instant.now()::isAfter 
-        - 수신 객체를 특정함
-        - 함수가 받는 인수와 참조하는 인수가 같다.
-        - 정적 참조와 비슷함
+        * 수신 객체를 특정함
+        * 함수가 받는 인수와 참조하는 인수가 같다.
+        * 정적 참조와 비슷함
     + 3. 비한정적 참조 : String::toLowerCase 
-        - 수신 객체를 특정하지 않음
-        - 주로 스트림 파이프라인에서 사용됨
-        - 함수 객체를 적용하는 시점에 수신 객체를 알려줌
+        * 수신 객체를 특정하지 않음
+        * 주로 스트림 파이프라인에서 사용됨
+        * 함수 객체를 적용하는 시점에 수신 객체를 알려줌
     + 4. 클래스 생성자 : String::new
     + 5. 배열 생성자 : Int[]::new
 
@@ -65,9 +65,76 @@ words.sort(ComparingInt(String::length));
 
 > 아이템44. 표준 함수형 인터페이스를 사용하라
 
+- 함수형 인터페이스: 단 하나의 추상 메소드만 가지는 인터페이스
+
 - 자바가 람다를 지원하면서, 과거의 API와 디자인패턴 등을 사용 등의 변화가 발생했다. 
     + 예를 들어 상위 클래스의 메소드를 재정의하는 템플릿 메소드 패턴의 매력이 크게 줄었다.
     + 함수형 프로그래밍의 핵심은 함수. 잘 작성된 함수는 클래스보다 더 좋은 효과를 낼 수 있다.
     + 이를 대체하는 현대적인 해법은 같은 효과의 함수 객체르 받는 정적팩터리나 생성자를 제공하는 것이다.
 
-- 
+- 함수형 인터페이스를 불필요하게 사용한 예를 보자.
+```java
+//LinkedHashMap의 removeEldestEntry를 재정의 - 캐쉬로 사용 가능함.
+//사이즈가 100보다 크면 Linked된 HashMap에서 가장 오래된 원소를 제거한다.
+//해당 메소드는 put 할 때, 참조된다.
+protected boolean removeEldestEntry(Map.Entry<K,V> entry) {
+    return size() > 100;
+}
+
+//removeEldestEntry 메소드는 인스턴스의 메소드다.
+//함수형 인터페이스를 통해 새로운 인스턴스를 생성해 내야하는데, 이 메소드를 구현하기 위해선 인스턴스가 필요하다.
+@FunctionalInterface
+interface EldestEntryRemovalFunction<K,V> {
+   boolean remove(Map<K,V> map, Map.Entry<K,V> eldest);
+}
+```
+- 이 인터페이스는 잘 작동한다. 하지만 이미 표준 함수형 인터페이스가 있다.
+- 필요한 용도에 맞는게 있따면, 직접 구현하지말고 표준 함수형 인터페이스를 사용해라.
+
+- 위의 함수형 인터페이스 대신, BiPredicate를 사용하면 된다.
+
+- java.util.function 패키지에는 43개의 함수형 인터페이스가 담겨있다. 그 중 핵심인 6개만 기억하면 나머지는 유추할 수 있다.
+    + UnaryOperator(연산) : 매개변수<T>를 연산 후 R 리턴 Function<T,R>의 하위 인터페이스.
+    + BinaryOperator(연산) : 매개변수<T,U>를 연산 후 R 리턴 BiFunction<T,U,R>의 하위 인터페이스. 
+    + Predicate(서술,조사): 매개 값을 조사하여 boolean으로 리턴 boolean test(T t);
+    + Function(매핑): 매개 값을 리턴 값으로 매핑 R apply(T);
+    + Supplier(공급): 리턴(공급) T get();
+    + Consumer(소비): 리턴값이 없는 void accept(T t);  **ex) forEach**
+
+```java
+// UnaryOperator - List : 매개변수 자신을 연산
+void replaceAll(UnaryOperator<E> operator) {..};
+//BinaryOperator - Stream : 매개변수 2개를 연산
+ T reduce(T identity, BinaryOperator<T> accumulator);
+// Predicate - Stream
+ Stream<T> filter(Predicate<? super T> predicate);
+// Function - Stream
+<R> Stream<R> map(Function<? super T, ? extends R> mapper);
+// Supplier - Optional
+public T orElseGet(Supplier<? extends T> other) {...};
+// Consumer - List
+void forEach(Consumer<? super T> action) {..};
+```
+- 표준함수형 인터페이스는 대부분 기본 타입만 지원한다. 기본 함수형 인터페이스에 박싱된 기본 타입을 넣어 사용하지는 말자.
+    + 동작은 한다. 계산이 많을 때 동작이 처참히 느려진다.
+
+- 구조적으로 함수형 인터페이스와 똑같더라도 인터페이스를 직접 작성해야할 때가 있다.(Comparator의 예)
+
+- 다음과 같은 상황에서 함수형 인터페이스를 직접 작성할지 고려하라.
+    + 자주 쓰이며, 이름 자체가 용도를 명확히 설명해줄 때
+    + 반드시 따라야 하는 규약이 있다. => EX) compare(비교)
+    + 유용한 디폴트 메소드를 제공할 수 있다.
+    
+- @FunctionalInterface 어노테이션은 다음과 같은 역할을 한다.
+    + 해당 인터페이스의 코드나 설명 문서를 읽는 사용자에게 인터페이스가 람다용으로 설계된 것임을 알려준다.
+    + 해당 인터페이스의 추상 메소드를 오직 하나만 갖도록 컴파일한다.
+    + 그 결과로써 유지보수 과정에서 누군가 메소드를 추가하는 일을 없도록 기대하게 해준다.
+
+- 그러므로 직접 만든 함수형 인터페이스는 반드시 @FunctionalInterface 어노테이션을 붙여라.
+
+- 주의점은 다음과 같다.
+    + 서로 다른 함수형 인터페이스를 메소드의 같은 위치에 다중 정의하지 말 것 ex) ExecutorService의 submit 메소드
+       * 사용자 입장에서 혼란을 준다. 심지어 매개변수의 개수까지 동일하다면 형변환을 해야 할 때도 있을 것이다.
+
+- 왠만하면 표준 함수형 인터페이스를 사용하자. 특수한 경우에는 직접 작성할지 고민하라.
+    
