--- a/책/effective-java/7. 람다와스트림.md
+++ b/책/effective-java/7. 람다와스트림.md
@@ -137,4 +137,28 @@ void forEach(Consumer<? super T> action) {..};
        * 사용자 입장에서 혼란을 준다. 심지어 매개변수의 개수까지 동일하다면 형변환을 해야 할 때도 있을 것이다.
 
 - 왠만하면 표준 함수형 인터페이스를 사용하자. 특수한 경우에는 직접 작성할지 고민하라.
+
+
+> 아이템45. 스트림은 주의해서 사용해라
+
+- 스트림 API는 다량의 데이터 처리 작업(순차 or 병렬)을 돋고자 자바8에 추가 되었다. 추상 개념중 핵심은 다음 2가지이다.
+    + 스트림은 데이터 원소의 유한 혹은 무한 시퀀스를 뜻한다.
+    + 스트림 파이프라인이 원소들로 수행하는 연산단계를 표현하는 개념이다.
     
+- 람다에서는 타입이름을 자주 생략하므로 매개변수 이름을 잘 지어야 스트림 파이프라인의 가독성이 높아진다.
+- helper 메소드를 적절히 활용하는 일의 중요성은 일반 반복되는 코드에서보다 스트림 파이프라인에서 훨씬 크다.
+
+- 스트림은 다음과 같은 상황에서 처리하기 어려울 수 있다.
+    + 한 데이터가 파이프라인의 여러 단계를 통과할 때 이 데이터의 각 단계에서의 값들에 동시에 접근하기 어렵다. (다음 파이프라인에서 이전 파이프라인 값을 접근하기 어렵다)
+
+- **반드시 스트림을 써야하는 것은 아니다. 반복문과 스트림 둘다 써보고 더 나은것을 택하라 **
+
+    
+> 아이템46. 스트림에서는 부작용이 없는 함수를 사용해라
+
+- 스트림은 처음에 이해하기 어려울 수 있고, 와닿지 않을 수 있다. 스트림은 함수형 프로그래밍에 기초한 패러다임이다.
+- 스트림 패러다임의 핵심은 일련의 변환을 재구성하는 부분이다. 이 때 각 변환 단계는 가능한 한 이전단계의 결과를 받아 처리하는 순수함수여야 한다.
+
+-foreach 연산은 스트림 계산 결과를 보고할 때만 사용하고, foreach 종단 연산에서 계산하지 말자.
+- stream 파이프라인 프로그래밍의 핵심은 부작용 없는 함수 객체에 있다.
+- 스트림을 올바르게 사용하려면 수집기를 잘 알아둬야하는데, 핵심적으로 toList, toSet, toMap, groupingBy, joining 이 있다.
