--- a/책/effective-java/7. 람다와스트림.md
+++ b/책/effective-java/7. 람다와스트림.md
@@ -162,3 +162,31 @@ void forEach(Consumer<? super T> action) {..};
 -foreach 연산은 스트림 계산 결과를 보고할 때만 사용하고, foreach 종단 연산에서 계산하지 말자.
 - stream 파이프라인 프로그래밍의 핵심은 부작용 없는 함수 객체에 있다.
 - 스트림을 올바르게 사용하려면 수집기를 잘 알아둬야하는데, 핵심적으로 toList, toSet, toMap, groupingBy, joining 이 있다.
+
+> 아이템 47. 반환 타입으로는 스트림보다 컬렉션이 낫다.
+
+- 자바 8 이전에는 원소 시퀀스를 반환하는 메소드는 수없이 많았다.(Collection, Set, List...를 타입으로 반환하는)
+- 자바8의 스트림이 생기면서 선택하는 일이 복잡하게 되었다.
+- Stream 메소드는 Iterable 인텊에ㅣ스가 정의한 추상 메소드를 전부 포함할 뿐 아니라, Iterable이 정의한대로 동작한다.
+    + 그럼에도 for-each로 스트림을 반복할 수 없는 이유는 stream이 Iterable을 확장하지 않아서 이다.
+    
+- 다음과 같은 방법으로 어떤 스트림도 for-each 반복할 수 있다.
+```java
+public static <E> Iterable<E> iterableOf(Stream<E> stream) {
+    return stream::iterator;
+}
+```
+- iterable을 반환하는 api를 스트림에서 처리하고자 할 경우 다음과 같이 사용할 수 있다.
+```java
+public static <E> Stream<E> streamOf(Iterrable<E> iterable) {
+    return StreramSupport.stream(iterable.spliterator(), false);
+}
+```
+
+- 위의 예제를 통해서 스트림 내부에서 주로 사용되면 stream 타입으로 리턴, 반복에서 쓰인다면 Iterable을 쓰면 되는 것 처럼 보인다.
+- **하지만 api 형식으로 제공할 떄 collectionn이나 하위 타입을 쓰는게 사용자를 배려하는 최선이 되므로, Iterable 하위 타입의 컬렉션을 쓰는게 낫다.**
+
+- 반환할 시퀀스의 크기가 메모리에 올려도 안전할 만큼 작다면 ArrayList 나 HashSet 같은 표준 컬렉션을 반환해도 좋지만. 컬렉션을 반환하는것이 좋다는 이유만으로 덩치 큰 시퀀스를 메모리에 올려서는 안된다.
+    + 예로 멱집합을 들 수 있는데, 2의 n승 보다 커질 경우 abstractCollection를 이용하여 간결하게 구현할 수 있다.
+    
+> 아이템 48. 스트림 병렬화는 주의해서 사용해라.
