--- a/책/effective-java/7. 람다와스트림.md
+++ b/책/effective-java/7. 람다와스트림.md
@@ -190,3 +190,29 @@ public static <E> Stream<E> streamOf(Iterrable<E> iterable) {
     + 예로 멱집합을 들 수 있는데, 2의 n승 보다 커질 경우 abstractCollection를 이용하여 간결하게 구현할 수 있다.
     
 > 아이템 48. 스트림 병렬화는 주의해서 사용해라.
+
+- 자바의 동시성 프로그래밍
+    + 첫 릴리즈 : wait/notify, 스레드, 동기화
+    + 자바 5 : Executor 프레임 워크
+    + 자바 7 : 포크 조인 프레임워ㅜ크
+    + 자바 8 : stream parallel 메소드
+
+- 환경이 아무리 좋더라도, 데이터 소스가 Stream.iterate 거나 중간 연산을 limit 으로 작성하면 파이프라인 병렬화로 성능 개선을 기대할 수 없다.
+- 대체로 스트림의 소스가 ArrayList, HashMap, HashSet, ConcurrentHashMap의 인스턴스거나 배열, int 범위, Long 범위 일 때 성능이 가장 좋다.
+- 위 자료구조의 또다른 주요 공통점은 원소들을 순차적으로 실행할 떄의 참조 지역성이 뛰어나다.
+- 스트림을 잘못 병렬화하면 성능이 나빠질 뿐만 아니라 결과 자체가 잘못되거나 예상못한 동작이 발생할 수 있다.
+- 스트림 병렬화는 오직 성능 최적화 수단임을 기억하자. 보통 병렬 스트림 파이프라인에서 공통의 포크 조인 풀로 수행(같은 스레드풀) 잘못된 파이프 라인 하나가 시스템 대부분에 영향을 줄 수 있음을 유의하자
+- 조건이 잘 갖춰지면 parallel 메소드 호출하나로 프로세서 코어 수에 비례하는 성느을 만끽할 수 있다. 
+
+- 예제
+```java
+static long pi(long n) {
+    return LongStream.rangeClosed(2, n)
+            .parallel()
+            .mapToObj(BigInteger::valueOf)
+            .filter(i -> i.isProbablePrime(50))
+            .count();
+}
+```
+
+- [How do the new fork/join tasks provided by Java SE 7 make it easier to write parallel programs?](https://www.oracle.com/technical-resources/articles/java/fork-join.html)
