--- a/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
+++ b/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
@@ -168,8 +168,8 @@ fun main() {
 
 }
 ```
-// plus 연산자는 plus라고 부르는 중위 연산자를 호출한다. [중위 연산 예](../../kotlin/src/concision/operation_overloading.kt)
-// 연산자 오버로딩이 가능한 함수 plus, minus, times(*), div, rem(%)
+- // plus 연산자는 plus라고 부르는 중위 연산자를 호출한다. [중위 연산 예](../../kotlin/src/concision/operation_overloading.kt)
+- // 연산자 오버로딩이 가능한 함수 plus, minus, times(*), div, rem(%)
 
 > 2.5 패키지 
 - 코틀린 패키지에서는 패키지가 저장된 디렉토리 구조와 패키지의 이름을 서로 일치시킬 필요가 없다.
