--- a/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
+++ b/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
@@ -54,7 +54,7 @@ fun main() {
 - 공개하지 않으려면, private, protected, internal modifier 를 사용해야 한다.
 - 자바와 달리 protected는 클래스를 확장한 경우에만 사용할 수 있고, 다른 클래스에서는 접근할 수 없다.
 - 코틀린 클래슨느 기본적으로 final 이다.
-- 코틀린 클래스를 상속할 수 있게 하려면 open 변경자슬ㄹ 사용하면 된다.
+- 코틀린 클래스를 상속할 수 있게 하려면 open 변경자를 사용하면 된다.
 - 생성자 정의가 클래스 이름 뒤에 온다
 - 접근자가 필요없다.
 - 자바와 달리 공개 클ㄹ래스 이름이 그 클래스가 담겨 있는 파일이름과 같을 필요가 없다 다르게 지정해도 된다. 그리고 더 많은 public 클래스가 한파일 내에 생성 가능하다. 
@@ -181,3 +181,96 @@ fun main() {
 - 하지만 자바와 같이 패키지와 디렉토리 구조를 일치시키는 관습을 채택하는 편이 좋은 두가지 이유가 있다.
     + 자바와 코틀린 파일을 혼합해서 사용해야 한다면 자바 파일을 패키지 이름과 일치하는 경로에 넣어야 한다.
     + 코틀린 소스 파일만 사용하는 경우라도 패키지와 소스 경로를 일치시키면 소스파일을 찾아내기가 더 쉽다.
+    
+> 2.6 가시성
+- 함수와 프로퍼티를 클래스 내부는 물론 패키지 수준에서도 정의할 수 있다.
+    + public: 패키지 수준에서 정의한 모든 대상은 기본적으로 public이다. 어떤 대상이 private라면 같은 파일 안에서만 이 대상을 볼 수 있다.
+    + private: 클래스 안에서만 바라 볼 수 있다. 코틀린에서는 외부 클래스에 정의된 비공개 멤버를 내부에서 볼 수 없다.
+    + internal: 같은 모듈에서만 볼 수 있다.
+    + protected: 클래스를 확장한 경우에만 사용할 수 있고, 다른 클래스에서는 접근할 수 없다.       
+
+> 2.7 함수
+- 코틀린에서는 진짜 함수가 아닌 대상이나 전혀함수가 아닌 대상에 대해서도 함수라는 단어를 사용한다.
+
+```kotlin
+// 함수 선언하기
+fun add(a: Int, b: Int): Int {
+    return a + b;
+}
+// 식 구문 : 반환 타입 생략 가능
+fun add(a: Int, b: Int) = a + b
+
+```
+
+- 클래스나 객체 안에서 함수를 정의할 수 있다.
+
+```kotlin
+fun sumOfPrimes(limit: Int): Long {
+    val seq: Seqeunce<Long> = SequenceOf(2L) + genereateSequenece(3L,{
+        it + 2
+    }).takeWhile {
+        it < limit
+    }
+// isPrime 함수는 seq 값을 close over 하기 때문에 sumOfPrimes 밖에서 정의할 수는 없다. 이를 클로저라고 한다.
+    fun isPrime(n: Long): Boolean = seq.takeWhile {
+        it * it <= n
+    }.all {
+        n * it != 0L
+    }
+    return seq.filter(::isPrime).sum()
+
+}
+```
+
+- 함수 오버라이드 하기
+ ```kotlin
+override fun toString() = ...
+```
+
+- 확장 함수 사용 : 확장 함수는 마치 클래스에 정의된 인스턴스 함수인 것 처럼 객체를 호출할 수 있는 함수를 말한다.
+```kotlin
+fun <T> length(list: List<T>) = list.size
+
+// 코틀린에서는 다음과 같이 정의할 수 있다.
+fun <T> List<T>.length() = this.size
+
+// 위 함수는 size와 달리 ()를 반드시 호출해야 한다.자바에서는 확장함수를 인스턴스 메소드 처럼 호출할 수 없으며 코틀린 확장함수를 이용하려면 정적 메소드로 호출해야 한다.
+``` 
+
+- 람다 
+```kotlin
+fun triple(list: List<Int>): List<Int> = list.map({a -> a*3})
+
+// 맵 코드에서 람다는 마지막 인자일 뿐 아니라 유일한 인자이기도하다. 
+fun triple2(list: List<Int>): List<Int> = list.map{a -> a*3}
+
+// 람다의 파라미터에 괄호를 붙이지 않는 것을 볼 수 있는데, 붙이면 컴파일 되지 않을 수 있으므로 유의해야한다.
+fun product(list: List<Int>): List<Int> = list.fold(1){a,b -> a*3}
+
+// 람다의 컴파일 속도를 높이기 위해 타입 추론에 최선을 다하지 않는다. 시간이 아주 오래 걸릴 경우 추론을 포기하고 타입 지정을 책임을 우리에게 준다.
+// 타입 지정을 피하고 타입 추론에 더 의존할수 있겠지만, 타입을 지정하면 타입오류로 컴파일이 이루어지지 않을 때 컴파일러가 알려준다.
+fun product2(list: List<Int>): List<Int> = list.fold(1){a: Int,b: Int -> a*3}
+
+fun List<Int>.product(): Int = this.fold(1) { a,b ->
+    val result = a * b
+    // return 을 생략해도 안전하다.
+    result
+}
+
+// 간이 구문을 사용할 수 있는데 다음과 같이 쓸 수 있다. 하지만 파라미터를 추론하는데 어려움이 있을 수 있으니, 명확하게 만들어 사용하는 습관을 가지자
+
+fun List<Int>.products(): Int = this.fold(1) {
+    it * 3
+}
+
+// 자바와 마찬가지로 코틀린에서도 람다가 자신을 둘러싸는 영역의 변수를 close over 할 수 있다.
+val multiplier = 3
+fun multiplyAll(list: List<Int>): List<Int> = list.map { it * multiplier } 
+
+// 하지만 일반적으로 클로저를 함수 인자로 바꿀 수 있다는 사실을 알고 있어야 한다. 함수 인자로 바꾸는 것이 더 안전하다.
+fun multiPlyAll2(list: List<Int>, multiplier: Int): List<Int> = list.map { it * multiplier }
+
+// 아주 좁은 영역에 있는 변수를 가두는 경우에만 클로저를 사용해야 한다.(함수 내부에 정의한 로컬 변수)
+// 자바와 달리 가변 변수도 담을 수 있지만 .... 안전한 프로그래밍을 위해 추천하지 않는다.
+```
+
