--- a/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
+++ b/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
@@ -274,3 +274,34 @@ fun multiPlyAll2(list: List<Int>, multiplier: Int): List<Int> = list.map { it * 
 // 자바와 달리 가변 변수도 담을 수 있지만 .... 안전한 프로그래밍을 위해 추천하지 않는다.
 ```
 
+> 2.8 널
+
+- 코틀린은 null이 될 수 있는 참조 타입에 ?를 붙인다.
+- 널이 될수 없는 타입이 널이 될 수 있는 타입의 자식 타입이다.
+
+```kotlin
+val x: Int = 3
+val y: Int? = x
+```
+
+- 널이 될 수 있는 타입은 NPE를 발생시킨다.
+
+- 코드의 예를 보면 다음과 같다
+```kotlin
+val s: String? = callSomeMethod()
+val l = if(s!=null) s.length else null
+
+// 코틀린은 다음과 같이 안전한 호출로 처리할 수 있다.
+val j = s?.length
+
+// 위 구문은 자바 연쇄 호출하는것과 비교해 훨씬 편리하다
+val city: City? = map[compayName]?.manager?.addresss?.city
+``` 
+
+- 엘비스 연산자와 기본 값
+    + 널이 아닌 기본 값을 사용하고 싶을 때가 있다. 이때 엘비스 연산자를 사용하면 된다.
+
+```kotlin
+// 중간에 null이 있으면 특별한 기본 값을 사용한다 ?: 연산자로 지정하며 이를 엘비스 연산자라 한다.
+val city: City = map[company]?.manager?.address?.city ?: City.UNKNOWN
+```    
