--- a/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
+++ b/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
@@ -305,3 +305,76 @@ val city: City? = map[compayName]?.manager?.addresss?.city
 // 중간에 null이 있으면 특별한 기본 값을 사용한다 ?: 연산자로 지정하며 이를 엘비스 연산자라 한다.
 val city: City = map[company]?.manager?.address?.city ?: City.UNKNOWN
 ```    
+
+> 2.9 프로그램 흐름과 제어 구조
+- 제어구조는 프로그램 흐름을 제어하는 요소다. 명령형 프로그래밍의 근간으로써 버그를 발생시키는 주요 원인
+- 따라서 가능한 사용하지 않는 편이 낫다. 함수형 프로그래밍을 함으로서 제어 흐름을 개념을 무시할 수 있다.
+
+```kotlin
+// 조건 선택
+val a: Int = 1
+val b: Int = 2
+
+val s = if (a < b) 
+            "$a is smaller than $b"
+         else 
+            "$b"            
+
+// 자바에서 중괄호 생략은 나쁜 습관처럼 받아드려 질 때가 있다. 하지만 코틀린은 그렇지 않다.
+// 두줄 이상에서는 중괄호를 써야 컴파일이 된다.
+
+val percent = return if (b == 0) {
+             0
+        } else {
+            val temp = a/b
+            tem * 100
+        }
+```
+
+- 다중 조건 선택하기 (switch case)
+```kotlin
+val tired = false
+val country = ""
+// 코틀린에서는 안전한 프로그래밍을 위해 왠만하면 effect를 넣는 일은 사양해야 한다.(break와 같은)
+// 가장 먼저 참이 되는 값을 반환한다.
+    val capital = when {
+        tired       -> "check for yourself"
+        "Australia" -> "Canberra"
+        "Brazil"    -> "Brasilia"
+        else        -> "Unknown"
+    }
+```
+
+- 루프 사용(자바와 비슷한 제어구조를 제공한다)
+    + 인덱스를 사용하는 루프
+    + 컬렉션에 들어 있는 값을 Iteration 하는 루프
+    + 조건이 성립하는 동안 Iteration 하는 루프
+
+```kotlin
+// 인덱스 사용
+for (i in 0 until 10 step 2)
+    print(i)
+
+// 다음과 같다
+val range = 0 until 10 step 2
+for(i in range) print(i)
+
+// until과 step은 int에 정의된 함수이므로 다음과 같이도 쓸 수 있다.
+for (i in 0.until(10).step(2)) ...
+```    
+
+> 2.10 비검사 예외
+
+- 자바와 달리 코틀린에는검사예외가 없다.
+- 모든 예외는 비검사 예외와 같은데, 자바에서 검사 예외를 감싸 비검사 예외로 변환하는 방식과 같다.
+- 차이점은 코틀린에서 try..catch..finally은 값을 돌려준다는 것.
+
+```kotlin
+val num: Int = try {
+    args[0].toInt()
+} catch (e: Exception) {
+    0
+} finallly {
+   // The code within the block is always executed.
+}
+```
