--- a/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
+++ b/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
@@ -378,3 +378,55 @@ val num: Int = try {
    // The code within the block is always executed.
 }
 ```
+
+> 2.11 사용한 자원 자동으로 닫기
+
+- 코틀린에서는 자바와 달리 사용한 자원을 자동으로 닫을 때 use 함수를 사용한다.
+```kotlin
+File("myfile.txt").inputStream()
+                  .use {
+                    it.bufferedReader()
+                      .lineSequence()   // 지연 계산 컬렉션
+                      .forEach(::println)
+            } // use 함수를 벗어나면 stream이 자동으로 닫힌다.
+
+File("myFile.txt").forEachLine {println(it)}    // 위의 방법은 파일 전체를 메모리에 올리기에 해당방법으로 사용할 수 있다.
+File("myFile.txt").useLine { it.forEach(::println) }    // 위와 같은 방법이다.
+```
+
+> 2.12 스마트 캐스트
+
+- 자바에서는 타입을 안전하게 변환하기 위해 다음과 같이하는데 좋지 않다.
+```java
+if (type instancceof object) {
+    ...
+}
+```
+- 코틀린에서는 스마트캐스트라는 특별한 기법이 있다.
+```kotlin
+val payload: Any = meesage.payload
+
+val length: Int = 
+    if (payload is string)
+        payload.length      //자동으로 캐스트해준다.
+    else 
+        -1
+
+val result: Int = when (payload) {
+    is String   -> payload.length
+    is Int      -> payload
+    else        -> -1
+}
+```
+
+- as 연산자를 통해 안전하지 않은 캐스트를 할 수 있다.
+```kotlin
+    // 객체가 타입 변환이 가능한 올바른 타입이 아니라면 classCastException이 발생한다.
+    val result: String = payload as String
+    // 변환에 실패하면 null로 변환한다
+    val result: String = payload as? String // 안전하지 않은 프로그래밍은 결코 추천하지 않는다.
+```
+
+> 2.13 동등성과 동일성 
+
+- 자바에서 빠지기 쉬운 함정중 하나는 동등성과 동일성을 혼동하는 것이다.
