--- a/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
+++ b/책/코틀린을다루는기술/02.코틀린프로그래밍개요.md
@@ -430,3 +430,23 @@ val result: Int = when (payload) {
 > 2.13 동등성과 동일성 
 
 - 자바에서 빠지기 쉬운 함정중 하나는 동등성과 동일성을 혼동하는 것이다.
+- 코틀린에서는 참조 동일성 - 객체까지 같은지 - (===), 동등성은 ==로 검사한다.
+
+
+> 2.14 문자열 인터폴레이션
+```kotlin
+println("$name's registration date: $date")
+
+// 문자열 안에 식을 넣을 수도 있다. 다만 중괄효를 넣어야 한다.
+println("$name's registration date: ${date.atZone(ZonId.of("America/Los_angelos"))}")
+```
+
+> 2.15 여러 줄 문자열
+- 코틀린에서는 3중 따옴표를 사용해서 여러 줄로 이뤄진 문자열도 쓉게 사용할 수 있다.
+```kotlin
+// https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.text/trim-margin.html
+println("""this is first line
+    |and this is the second one""".trimMargin()
+)
+// trimMargin의 기본값은 |
+```
