--- a/책/kotlin-in-action/2.  코틀린기초.md
+++ b/책/kotlin-in-action/2.  코틀린기초.md
@@ -42,6 +42,52 @@ fun main(args:Array<String>) {
 }
 ```
 
+> 2.2 클래스와 프로퍼티
+
+### 클래스
+```kotlin
+class Person(val name:String)
+```
+- 코틀린의 클래스는  public 기본 가시성을 갖는다.
+- 위와 같은 클래스를 코드가 없이 데이터만 저장하는 값 객체라고 부른다.
+
+
+### 프로퍼티
+
+- 클래스의 목적은 데이터를 캡슐화하고 캡슐화한 데이터를 다루는 코드를 한 주체 아래 가두는 것이다.
+
+- 코틀린은 프로퍼티를 언어 기본 기능으로  제공하고, 자바의 필드와 접근자 메소드를 완전히 대신한다.
+
+- 기본적으로 코틀린에서 프로퍼티를 선언하는 방식은 프로퍼티와 관련있는 접근자를 선언하는 것이다.
+    + 코틀린은 값을 저장하기 위한 비공개 필드와 값을 저장하기 위한 세터, 일긱위한 게터로 이뤄진 간단한 디폴트 접근자 구현을 제공한다.
+    + val type의 property는 getter만 선언하며, var type은 getter와 setter를 선언한다.
+    
+- 이름이 is로 시작하는 프로퍼티의 게터는 get을 붙이지  않고 is를 그대로 사용하며, 세터는 set이 대신한다.
+
+
+### 커스텀 접근자
+- isSquare 프로퍼티에는 자체 값을 저장하는 필드가 필요없다.
+- 이 프로퍼티는  자체 구현을 제공하는 getter가 존재한다.
+- 함수로 정의하는 것과  차이점은 없다. 가독성이 유일한 차이다.
+```kotlin
+class Rectangle(val height:Int, val width:Int) {
+    val isSquare:Boolean
+    get() {
+        height === width
+    }
+    
+}
+```
+### 디렉토리와 패키지
+- 자바에서는 패키지  구조와 일치하는 디렉터리 계층 구조를 만들고 클래스의 소스코드를 그 클래스가 속한 패키지와 같은 디렉터리에 위치해야 한다.
+- 코틀린에서는 여러 클래스를 한 파일에 넣을 수 있고, 파일의 이름도 마음대로 정할 수 있다.
+- 코틀린에서 디스크상의 어느 디렉토리에소스코드 파일을 위치시키든 관계없다. 따라서 원하는 대로 소스코드를 구성할 수 있다.
+- 하지만 대부분의 경우 자바와 같이 패키지 별로 디렉토리를 구성하는 편이 낫다. 특히 자바와 코틀린을 함께 사용하는 프로젝트라면...
+- 그렇다고 여러 클래스를 한파일에 넣는 것을 주저하지말자. 특히 클래스의 소스코드 크기가 작은 경우 더더욱 그렇다.
+
+> 2.3 선택표현과 처리 : enum, when
+
+    
 ###  제어 구조
 
 ### 스마트  캐스트
