--- a/책/kotlin-in-action/2.  코틀린기초.md
+++ b/책/kotlin-in-action/2.  코틀린기초.md
@@ -87,10 +87,96 @@ class Rectangle(val height:Int, val width:Int) {
 
 > 2.3 선택표현과 처리 : enum, when
 
-    
-###  제어 구조
+### enum 클래스
+
+- 코틀린에서 enum class를 사용하지만 자바에서는 enum을 사용한다. 
+- enum은 class 앞에 있을 때는 특별한 의미를 지니지만 다른 곳에서는 이름에 사용할 수 있다.
+- enum은 soft 키워드인데, class 앞에서만 특별한 의미를 갖고 다른 곳에서 변수이름으로.. 등 사용가능하다.
+- 반면 class 키워드는 특별한  의미를 지니므로 이름으로 사용하려면 clazz와 같은 네이밍을 할당해야한다.
+
+```kotlin
+enum class Color (val r: Int, val g: Int, val b: Int) { // 상수 프로퍼티 정의 가능
+    RED(255, 0, 0),
+    GREEN(0,255,0),
+    BLUE(0,0,255);
+}
+// when 과 같이 사용하기
+fun getMnemonic(color: Color) =
+    when(color) {
+        Color.RED, COLOR.GREEN -> "RICHARD"
+        COLOR.BLUE ->  "IN"
+        else -> "UNKNOWN"
+    }
+// 자바와 달리 break는 없다. switch-case와 같이 작동한다.
+```
+
+- 코틀린에서 when은 switch보다 훨씬 강력하다. 코틀린에서 when 분기 조건은 임의의 객체를  허용한다.
+- when 식은 인자 값과 매치하는 조건 값을 찾을 때까지 각 분기를 검사한다.
+- 아래에서는 setOf(color1, color2)와 분기 조건에 있는 객체 사이를 매치할 때 동등성을  사용한다.
+
+```kotlin
+fun mix (color1:Color, color2:Color) =
+    when(setOf(color1, color2)) {
+        setOf(Color.RED, Color.BLUE) -> Color.GREEN
+        ...
+    }
+```
+- 위와 같은 구조에서 임의의 객체를 계속 생산해 내기 때문에 비효율적일 수 있다.
+- 코드가 간결하지 않지만 성능을 향상 시키기 위해 인자 없는 when을 사용하여 불필요한 객체 생성을  막을 수 있다.
+
+```kotlin
+fun mixOptimized(color1:Color, color2:Color) =
+    when {
+        (color1 == Color.RED || color2 == COLOR.GREEN) -> "OK"
+    }
+```
 
 ### 스마트  캐스트
+
+- 코틀린에서는 is를 사용해  변수 타입을 검사한다.(자바의 instanceOf와 비슷하다.)
+
+```kotlin
+interface Expr
+class Num (val value:Int):Expr
+class Sum (val left:Expr, val right:Expr):Expr
+
+fun eval(e:Expr): Int {
+    if (e is Num) {
+        val n = e as Num  //명시적 타입 캐스팅
+        return n.value
+    }
+    if (e is  Sum) {
+        return eval(e.left)+eval(e.right) // 스마트 캐스팅을 사용, 스마트캐스트를 사용하려면 프로퍼티는 val type 이어야 한다. 이유는 항상 같은 값을 내놔야 하기 때문에
+    }
+}
+
+```
+
+-  when으로 refactoring
+```kotlin
+fun eval(e:Expr): Int = when(e) {
+    is Num -> e.value
+    is Sum -> eval(e.left) + eval(e.right)
+}
+```
+
+- if와 when의 분기에서 블록 사용
+- 여러 식이 작성된다면, 블록을 통해 표현할 수 있고  마지막 라인에 결과 값을 위치한다.
+- 블록의 마지막 식이 블록의 결과 라는 규칙은 블록이 값을 만들어 내야 하는 상황에 항상 성립한다.
+```kotlin
+fun eval(e:Expr): Int = when(e) {
+    is Num -> {
+            log.info("num is ${e.num}")
+            e.value
+       }
+    is Sum ->{
+        val sum = eval(e.left) + eval(e.right)
+        log.info("sum is $sum")
+        sum
+    }
+}
+```
+
 
 ### 예외 던지기와 예외 잡기
 
