--- a/책/kotlin-in-action/2.  코틀린기초.md
+++ b/책/kotlin-in-action/2.  코틀린기초.md
@@ -177,6 +177,115 @@ fun eval(e:Expr): Int = when(e) {
 }
 ```
 
+> 2.4 대상을 iteration
 
-### 예외 던지기와 예외 잡기
+- 코틀린에는 while과 do-while루프가 있다. 두 루프는 자바와 다르지 않다.
+```kotlin
+while(조건) {
+}
 
+do {
+...
+} while(조건)
+```
+
+- 코틀린에는 자바의 for루프에 해당하는 요소가 없다.(초기값을 사용한 증감). 코틀린에서는 범위를 사용한다.
+- 코틀린의 범위는 폐구간 또는 양끝을 포함하는 구간이다. 이런식으로 어떤 범위에 속한 값을 일정한 순ㅅ너로 이터레이션하는 경우를 수열이라고 부란다.
+
+```kotlin
+for(i in 1..10) {
+...
+}
+
+for(i in 100 downTo 1 step 2) {
+...
+}
+
+for (i in 0 until size) {
+...
+}
+```
+- map 에 대한 iteration
+```kotlin
+//map
+val binaryReps = TreeMap<Char, String>()
+
+for((letter, binary) in binaryReps) {
+...
+}
+```
+- 컬렉션에 대한 iteration
+```kotlin
+// list 
+val list = arrayListOf("10", "11")
+for((index, element)  in list.withIndex()) {
+..
+}
+```
+
+- in을 이용한 검사
+```kotlin
+// c in 'a' .. 'z' ==> c >= 'a' && c<= 'z'
+fun isLetter(c:Char) = c in 'a'.. 'z' || c  in 'A'..'Z' 
+fun isNotDigit(c:Char) = c !in '0'..'9'
+
+fun recognize(c:Char) = when(c) {
+    in '0'..'9' -> true
+}
+val isIn = "kotlin" in setOf("java", "scala")
+```
+
+- in 범위는 문자에만 국한하지 않는다. 비교가 가능한 클래스라면 인스턴스 객체를 통해 범위를 만들 수 있다.
+
+> 2.5 코틀린의 예외 처리
+- 코틀린의 예외처리는 자바나 다른언어의 예외처리와 비슷하다. 차이점은 new 키워드를 쓰지 않는다.
+```kotlin
+if(percentage !in 0..100) {
+    throw IllegalArgumentException(...)
+}
+```
+
+- 자바와 달리 코틀린에서는 예외가 식에 포함될 수 있다.
+```kotlin
+//예외가 생기면 변수가 초기화되지  않는다.
+val percentage = if(number  in 0..100) number
+else throw IllegalArgumentException
+```
+
+### try, catch, finally
+- 자바와 마찬가지로 try, catch, finally를 사용한다.
+```kotlin
+fun readNumber(reader:BufferedReder):Int? {
+    try {
+        val line = reader.readLine()
+        return Integer.parseInt(line)
+    } catch(e: NumberFormatException)  {
+        return null
+    } finally {
+        reader.close()
+    }
+}
+```
+- 위에서 자바와의 가장 큰 차이점은 IOException을 함수에 선언하지 않았다는 점이다.
+- 그 이유는 코틀린에서는 다른 최신 언어와 마찬가지로 checked 예외와 unchecked예외를 구별하지 않기 때문이다.
+- 자바에서 checked 예외를 강제하는데, 의미없이 다시 던지거나 처리하지 않고 무시하는 경우가 흔하다. (이로 인해 오류를 방지하지 못한다.)
+
+- 위에서 IOException은 close를 수행하다 발생할 수 있는데 ,예외를 잡아서 특별히 해줄게 없으므로 예외를 catch하는 코드는 불필요하다.
+- 하지만 numberFormatException은 실행시점에 빈번하게 발생할 수 있다.
+- 이렇듯 checked,unchecked 예외처리의 경계를 허물고 실제로 반드시 처리해야하는 예외에 집중해야한다.
+
+### try를 식으로 사용
+- 코틀린에서는 try 키워드는  if나 when과  마찬가지로 식이다. 따라서 try의 값을 변수에 대입할 수 있다.
+- if나 when과 달리 블록으로  감싸야 한다. 다른 키워드와 마찬가지로 try본문에 여러 문장이 있으면 마지막 식이 값 전체 결과이다.
+
+```kotlin
+fun readNumber(reader:BufferedReder):Int? = 
+try {
+ val line = reader.readLine()
+  Integer.parseInt(line)
+} catch (e: NumberFormatException) {
+ null
+} finally {
+    reader.close()
+}
+```
