--- a/책/kotlin-in-action/3. 함수 정의와 호출.md
+++ b/책/kotlin-in-action/3. 함수 정의와 호출.md
@@ -89,4 +89,81 @@ fun performOperation() {
 ```
 
 
-> 3.3 메소드를 다른 클래스에 추가: 확장함수오 확장 프로퍼티
+> 3.3 메소드를 다른 클래스에 추가: 확장함수와 확장 프로퍼티
+
+- 기존 코드와  자연스럽게 통합하는 것은 코틀린의 핵심 목표 중 하나이다.
+- 확장함수는 기존 자바 API를 재작성하지 않고도 코틀린 코드로 만들 수 있다.
+- 확장함수를 만드려면 추가하려는 함수 이름 앞에 그 함수가 확장할 클래스의 이름을 덧붙이기만 하면 된다.
+- 클래스 이름을 수신객체 타입이라 부르며, 확장함수가 호출되는 대상이 되는 값을 수신 객체라 한다.
+```kotlin
+// String - 수신 객체 타입, this - 수신 객체
+fun String.lastsChar(): Char = this.get(this.length - 1)
+
+println("kotlin".lastsChar())
+```
+- String 클래스는 우리가 작성한 것이 아닌, 자바 API이지만 원하는 메소드를 String 클래스에 추가할 수 있다.
+- 확장 함수 내부에서는 일반적인 인스턴스 메소드의 내부에서와 마찬가지로 수신 객체의 메소드나 프로퍼티를 바로 사용할 수 있다.
+- 하지만 확장함수가 캡슐화를 깨지 않는다. 그 이유는 private 혹은 protected 멤버를 사용할 수 없기 때문이다.
+
+### import와 확장 함수
+- 확장함수를 정의했다고 해도 자동으로 프로젝트 안의 모든 소스코드에서 그 함수를 사용할 수 있지는 않다. 즉 임포트를 해야한다.
+```kotlin
+import strings.lastChar
+val c = "kotlins".lastChar()
+
+```
+```kotlin
+// as  키워드의 사용 
+import strings.lastChar as last
+val c = "kotlins".last()
+```
+
+### 확장함수는 오버라이드 할 수 없다.
+
+- 코틀린의 메소드 오버라이드도 일반적인 객체지향 메소드 오버라이드와 마찬가지다. 하지만 확장함수는 오버라이드 할 수 없다.
+
+- 상위 클래스로부터 오버라이드한 메소드 출력
+```kotlin
+open class View {
+    open fun click() = println("view clicked")
+}
+
+open class Button: View() {
+    override fun click()  = println("button click")
+}
+
+val view:View = Button()
+view.click()    // button click
+```
+
+- 확장함수는 클래스 밖에 선언되고 정적타입에 의해 어떤 확장함수가 호출될지 결정된다. 그러므로 오버라이드 할 수 없다.
+- 확장함수와 멤버함수의 이름에 대한 시그니처가 같다면 확장함수가 아닌 멤버함수가 호출된다.
+```kotlin
+fun View.showOff() = Println("i'm view")
+fun Button.showOff() = Println("i'm button")
+```
+
+### 확장 프로퍼티
+- 확장 함수와 마찬가지로 확장 프로퍼티도 일반적인 프로퍼티와 같은데 단지 수신 객체 클래스가 추가 됐을 뿐이다.
+- 뒷받침할 수 있는 필드가 없어서 기본 게터를 구현을 제공할 수 없으므로 최소한 게터는 꼭 정의 해야 한다.
+```kotlin
+// 확장 프로퍼티의 선언
+val String.lastChar: Char
+    get() = get(length - 1)
+
+prinln("kotlin".lastChar)   // >> n 
+
+// 변경 가능한 확장 프로퍼티
+
+val StringBuilder.lastChar:lastChar
+    get() = get(lentgh - 1)
+    set(value: Char) {
+        this.setCharAt(lentgh-1, value)
+    }
+
+
+val sb = StringBuilder("kotlin?")
+sb.lastChar = "!"    
+
+println(sb)         // >> kotlin!
+```
