--- a/책/kotlin-in-action/3. 함수 정의와 호출.md
+++ b/책/kotlin-in-action/3. 함수 정의와 호출.md
@@ -167,3 +167,113 @@ sb.lastChar = "!"
 
 println(sb)         // >> kotlin!
 ```
+> 3.4 컬렉션 처리
+
+### 가변 인자 함수
+- vararg: 리스트를 생성하는 함수를 호출할 때 원하는 만큼 많이 원소를 전달할 수 있다.
+```kotlin
+fun listOf(vararg  values:T): List<T> {..}
+
+listOf(1,2,3,4)
+
+// 이미 배열의 있는 원소도 배열 앞에 *를 붙이기만하면 된다.
+val args:Array<String> = []
+listOf("args:", *args)
+```
+
+### 중위 호출과 구조 분해 선언
+- 중위  호출 시에는 수신객체와 유일한 메소드 인자 사이의 메소드 이름을 넣는다.
+```kotlin
+// 맵  만들기
+val map  = mapOf(1.to("one"), 2 to "two")
+```
+
+- 함수를 중위 호출에 사용하게 허가하고 싶으면 infix 변경자를 함수앞에 선언한다.
+```kotlin
+infix  fun Any.to(other:Any) = Pair(this, other)
+
+// pair의 내용으로 두 변수를 즉시 초기화 할수도 있다.
+val (number, name) = 1 to "one"
+```
+
+- 위와 같은 기능을 구조분해라고 한다. 
+
+```kotlin
+// 구조분해의 또다른 예 
+for ((index, element) in  collection.withIndex()){...}
+
+// to는 확장함수다.to를 사용하면 타입과 관계없이 임의의 순서쌍을 만들 수 있따. 이는 to의 수샌객체가 제네릭이라는 뜻이다.
+// mapOf 선언을 살펴보면 다음과 같다.
+//가변인자를 전달할 수 있으며, 순서쌍으로 전달해야한다.
+fun <K, V> mapOf(vararg values:Pair<K,V>): Map<K,V>
+```
+
+### 문자열과 정규식
+- 코틀린 문자열은 자바와 같아서 코틀린<->자바간 메소드 호출이 자유롭다.
+
+- "/user/yole/kotlin/chapter.adoc"문자열 파싱하기
+```kotlin
+fun parsePath(path:String)  {
+    // 3중 따옴표 문자열을 사용한  정규식 표현
+    // 3중따옴표 문자열에서는  역슬래시(\)를 포함한 어떤 문자도 이스케이프 처리하지 않아도 된다.
+    //  ex)  \\. 표현했던 방식이 -> \.
+    val regex = """(.+)/(.+)/.(.+)""".toRegex()
+    val matchResult = regex.matchEntire(path)
+    ....
+}
+```
+
+- 여러 줄 3중 따옴표 문자열
+```kotlin
+
+val  kotlinLogo = """| //
+                    .| //
+                    .|/\"""
+println(kotlinLogo.trimMargin("."))
+
+>> | //
+   | //
+   |/\
+```
+
+- 라이브러리를 새 언어에서 활용하는 패턴을 '라이브러라 알선'  패턴이라고 부른다.실제로 코틀린 표준 라이브러리 중 상당 부분은 자바클래스의 확장 라이브러리로 이루어 져 있다.
+- jetBrain이 만든 안코 라이브러리도 안드로이드 API를 코틀린에 맞춰 확장한 함수를 제공한다.
+
+### 로컬함수와 확장
+- 많은 개발자는 좋은 코드는 중복없는 코드라고 믿는다. DRY - Don't Repeat Yourself
+- 자바에서 함수로 많이 쪼개다보면  메소드 사이의 관계를 파악하기 힘들어서 코드를 이해햐기 어려운 경우가 있다.
+- 코틀린에서는 깔끔한 방법이 있는데, 함수에서 추출한 함수를 원함수 내부에 중첩 시킬 수 있다.
+
+- 코드 중복을 로컬함수를 통해 제거하는 방법
+```kotlin
+class User(val id:Int, val name:String, val address:String)
+fun saveUser(user:User) {
+    fun validate(user:User, value:String, filedName: String) {
+        ...
+    }
+    validate(...)
+    validate(...)
+    validate(...)
+}
+```
+
+- 확장함수와 user 객체의 내부 호출을 이용해 다음과 같이 개선해볼수도 있을 것이다.
+```kotlin
+class User(val id:Int, val name:String, val address:String)
+fun User.validateBeforeSave() {
+    fun validate(value:String, filedName: String) {
+        ...
+    }
+    validate(name, "name")
+    validate(address, "address")
+}
+
+fun saveUser(user:User) {
+       user.validateBeforeSave()
+}
+```
+
+- 위 코드를 통해 User를 간결하게 유지하면서 더 쉽게 코드를 파악할 수 있다.
+- 확장함수를 로컬함수로 정의할수도 있다. User.validateBeforeSave를 saveUser 내부에 로컬 함수로 넣을 수 있다. 하지만 중첩된 함수의 깊이가 길어지면 코드는 읽기 굉장히 힘들어진다.
+- 따라서, 일반적으러 한단계 함수를 중첩시키라고 권장한다.
+
