--- a/책/kotlin-in-action/4. 클래스와 인터페이스.md
+++ b/책/kotlin-in-action/4. 클래스와 인터페이스.md
@@ -335,7 +335,7 @@ class DelegatingCollection<T>: Collection<T> {
     // 새로운 메소드 정의 가능
 }
 ```    
-- 위와 같은 인터페이스를 구혆날 때 by 키워드를 통해 그 인터페이스에 대한 구현을 다른 객체에 위임 중이라는 사실을 명시할 수 있다.
+- 위와 같은 인터페이스를 구현할 때 by 키워드를 통해 그 인터페이스에 대한 구현을 다른 객체에 위임 중이라는 사실을 명시할 수 있다.
 ```kotlin
 class  DelegatingCollection<T> (innerList: Collection<T> = ArrayList<T>): Collection<T> by innerList
 ``` 
