--- a/책/kotlin-in-action/5. 람다 프로그래밍.md
+++ b/책/kotlin-in-action/5. 람다 프로그래밍.md
@@ -98,3 +98,133 @@ data class Person(val name: String,   val age:Int)
 val  createPerson = ::Person
 val p = createPerson("bob", 3) 
 ```
+
+> 5.2 컬렉션 함수형 API
+- [ref](https://kotlinlang.org/docs/reference/sequences.html)
+```kotlin
+data class Person(val name:String, val age:Int)
+
+val list = listOf(1,2,3,4)
+list.filter { it %2 == 0 }
+list.map { it.name }
+```
+- flatMap 함수는 인자로 주어진 람다를  컬렉션의 모든 객체에 적용하고 람다르 적용한 결과 얻어지는  여러 리스트를 한 리스트로 한데 모은다.
+-  리스트의 리스트가 있는데 중첩  리스트의 원소를  한곳에 모아야 할 경우 flatMap을 떠올릴 수 있지만, 특별히 Map할 대상이 없다면 flattern()  함수를 사용하면 된다.
+```kotlin
+val strings = listOf("abc", "def")
+stringss.flatMap{ it.toList()}
+```
+
+> 5.3 지연 계산 (lazy) 컬렉션 연산
+- 컬렉션 함수의 계산 결과는 즉시 생성한다. 이는 컬렉션 함수를 연쇄하면  매 단계마다 계산 중간 결과를 새로운 컬렉션에 임시로 담는다.
+- 효율적으로 만들기 위해 시퀀스를 사용해야하고, 중간 결과를 생성하지 않기에 성능이 눈에 띄게 좋아진다.
+- 시퀀스 연산은 지연계산을 하기 때문에 정말 계산을 실행하게 만들려면 최종 시퀀스의 원소를하나씩 이터레이션하거나 최종 시퀀스를 리스트로 변환해야한다.
+```kotlin
+people.asSequence()
+    .map(Person::name)
+    filter{it.startsWith("A")}
+    .toList()
+```  
+
+- 시퀀스를 사용하면 지연계산이 이루어지고, 일부 계산이 이루어지지 않을 수 있다.
+```kotlin
+// 아래 코드에서 원소 2의 결과가 처리되어 검사하므로, 3과 4는 계산하지 않는다.
+// 반면  컬렉션은 모든 원소를 변환하고 map할  때 리스트로 변환된다.
+listOf(1,2,3,4).asSequence().map{it * it}.find{it > 3}
+```
+
+### 시퀀스 만들기
+- generateSequence 함수를 사용할 수 있다.
+```kotlin
+val natureNumbers = generateSequence(0) {it + 1}
+val numbersTo100 = natureNumbers.takeWhile {  it <= 100}
+numbersTo100.sum()  // 모든 지연 계산은 sum 결과를 계싼할 때 수행된다.
+```
+> 5.4  자바 함수형  인터페이스 활용
+- 코틀린람다를 자바 API에 사용해도아무 문제 없다.
+- 추상 메소드가 단 하나만 있는 함수형 인터페이스 또는 SAM 인터페이스를 사용하면 람다를 넘길 수 있다.
+```kotlin
+// 자바에서 @FunctionalInterface 어노테이션은 추상메소드만 사용하도록 강제하며, 메소드 하나 더 생성하면 컴파일에러가 난다.
+//@FunctionalInterface    
+public interface OnClickListener  {
+    void onClick(View v);
+}
+
+button.setOnClickListener {view -> ..}  // 익명 클래스를 넘길 수 있지만, 람다를 넘길 수 있다.
+```
+- 코틀린 함수를 사용할 때는 코틀린 컴파일러가 코틀린 람다를 함수형 인터페이스로 변환해주지 않는다.
+- 자바와 달리 코틀린에서는 제대로 된 함수 타입이 존재하기 때문이다. ex) (Int, String)  -> Int
+- 코틀린에서 함수를 인자로 받을 필요가 있는 함수는 함수형 인터페이스가 아니라 함수타입을 인자 타입으로 사용해야한다.
+
+
+###  자바  메소드에 람다를 인자로 전달
+```kotlin
+// 무명 객체와 람다 사이에 차이가 있다. 람다를 사용하면 정의에 들어가는 함수의  변수에 접근하지 않는 람다에 대응하는 무명 객체를  메소드를 호출할 떄마다 반복사용한다. 하지만 무명객체는 새로운 인스턴스를  만든다.
+val runnable = Runnable {println(42)}
+postPoneComputation(1000, runnable) //반복 사용
+// 람다가 주변 영역의 변수를 포함하면 매 호출마다 같은 인스턴스를 사용할 수 없기에 새로운 인스턴스를 생성한다.
+fun handleComputation(id:String) {
+    postponeComputation(1000) {println(id)} 
+}
+```
+
+### 람다를 함수형 인터페이스로 명시적으로 변경
+- SAM 생성자는 람다를 함수형 인터페이스의  인스턴스로 변환할 수 있게 컴파일러가 자동으로 생성한 함수다.
+- 컴파일러가 자동으로 람다를 함수형 인터페이스 무명 클래스로 바꾸지 못하는 경우 SAM 생성자를 사용할 수 있다.
+```kotlin
+fun createAllDoneRunnable(): Runnable {
+    //SAM 생성자 이름은 사용하려는  함수형 인터페이스의 이름과 같다.
+    return Runnable { println("All done!")}
+}
+```
+- 람다를 사용하면 무명 객체와 달리 인스턴스  자신을 가르키는 this가 없다. this를 쓰면 람다를 둘러싼 클래스의 인스턴스를 가르키게 되고 this를 사용하고 싶다면 무명 객체를 사용해야 한다.
+
+> 5.5  수신객체 지정 람다 : with와 apply
+
+### with 함수
+- with와 apply 함수는 매우 유용하다.
+
+- 아래 예제에서 with 함수는 2개의 인자가 넘어가는데, stringBuilder와 람다함수다.
+-  첫번 째 인자로 받은 객체를 두번 째  인자로  받은 람다의 수신 객체로 만들며 this로 접근할 수 있다.
+```kotlin
+fun alphabet(): String {
+    val stringBuilder = StringBuilder()
+    return  with(stringbuilder) {
+        for(letter in 'A'..'Z') {
+            this.append(letter)
+        }
+        return  toString()   
+    }
+}
+```
+- 참조하는 메소드 이름이 같을 경우, 레이블을 붙이면 정확히 알 수 있다. ex)this@OuterClass.toString()
+
+### apply 함수
+- apply는 with와 거의 같다. 차이점은 항상 자신에게 전달된 객체를 반환한다는 점이다.
+- apply는 확장함수로 정의된다. 수신 객체가 전달받은 람다의 수신객체가 된다.
+```kotlin
+fun alphabet() = StringBuilder().apply {
+    for(letter in 'A'..'Z')  {
+        append(letter)
+    }
+}.toString()
+```
+- apply는  객체의 인스턴스를 만들면서 즉시 프로퍼티 중 일부를  초기화해야 하는 경우 유용하다. 자바의 경우 builder 객체가  이러한 역할을담당한다.
+```kotlin
+fun  createViewWithCustomAttributes(context:Context) {
+    TextView(context).apply {
+    ///textView가  수신객체가 된다.
+        text = "sample"
+        textSize = 20.0
+    }
+}
+```
+- StringBuilder 를 편리하게 사용 가능한 buildString
+```kotlin
+//buildString 은 표준라이브러리로 StringBuilder와 toString() 을 호출해주는 함수
+val text = buildString {
+    for(letter in 'A'..'Z') {
+        append(letter) //바로 사용가능
+    }
+}
+```
